--- a/빅데이터를 지탱하는 기술.md
+++ b/빅데이터를 지탱하는 기술.md
@@ -26,3 +26,14 @@
   - ETL 프로세스: 외부의 데이터 웨어하우스 제품을 이용하는 것,
                 이를 위해 분산 스토리지에서 추출한 데이터를 웨어하우스에 적합한 형태로 변환
   
+## 기간계 시스템 
+- mission-critical system
+- 비즈니스 근간에 관련된 중요한 시스템으로 이것이 정지되면 업무가 멈추기 때문에 완벽하게 테스트를 반복하고 신중하게 운용
+- 실행과정을 로그파일이나 데이터베이스 등에 기록
+
+## 정보계 시스템 
+- information system
+- 사내 커뮤니케이션과 의사 결정을 위해 이용하는 시스템으로 이것이 정지되어도 그 영향범위가 제한되어 있기 때문에 기간계 시스템만큼 엄격한 운영정책을 가지고 있지 않음
+
+- 데이터를 효율적으로 분석하려면 정보계 시스템으로 분리해야 함
+- 데이터 복사 없이는 정보계 시스템이 기간계 시스템에 연결되지 못함
