--- a/빅데이터를 지탱하는 기술.md
+++ b/빅데이터를 지탱하는 기술.md
@@ -26,14 +26,43 @@
   - ETL 프로세스: 외부의 데이터 웨어하우스 제품을 이용하는 것,
                 이를 위해 분산 스토리지에서 추출한 데이터를 웨어하우스에 적합한 형태로 변환
   
-## 기간계 시스템 
+### 기간계 시스템 
 - mission-critical system
 - 비즈니스 근간에 관련된 중요한 시스템으로 이것이 정지되면 업무가 멈추기 때문에 완벽하게 테스트를 반복하고 신중하게 운용
 - 실행과정을 로그파일이나 데이터베이스 등에 기록
 
-## 정보계 시스템 
+### 정보계 시스템 
 - information system
 - 사내 커뮤니케이션과 의사 결정을 위해 이용하는 시스템으로 이것이 정지되어도 그 영향범위가 제한되어 있기 때문에 기간계 시스템만큼 엄격한 운영정책을 가지고 있지 않음
 
 - 데이터를 효율적으로 분석하려면 정보계 시스템으로 분리해야 함
 - 데이터 복사 없이는 정보계 시스템이 기간계 시스템에 연결되지 못함
+
+### 크로스 테이블
+- 사람들이 보기 편한 보고서
+- 데이터베이스에서 다루기 어려움
+  - 왜냐하며 디비에 새로운 행을 추가하는 것은 가난하지만, 열을 늘리는 것은 간단하지 않기 때문 
+
+### 트랜잭션 테이블
+- 보고서의 바탕이 되는 테이블
+- 행 방향으로만 증가하고 열 방향으로는 데이터를 증가시키지 않도록 만든 것
+
+### 크로스 집계
+- 트랜잭션 테이블 -> 크로스 테이블로 변환하는 과정
+- 소량의 데이터를 크로스 집계할 때 -> 스프레드시트의 피벗 테이블
+
+### 룩업 테이블
+- 트랜잭션 테이블에 새로운 항목을 추가하는 것이 아니라, 다른 테이블과 결합하고 싶을 때 사용되는 것
+
+### RDB
+- 5GB 정도면 일반적인 RDB가 데이터 마트에 적합
+- 장점: 원래 지연이 적고, 많은 수의 클라이언트가 동시 접속해도 성능이 나빠지지 않아 많은 사용자가 사용하는 실제 운영 환경의 데이터 마트로 우수함
+- 단점: 메모리가 부족하면 급격히 성능이 저하됨, 수억 레코드를 초과하는 데이터 집계에서는 항상 디바이스 I/O가 발생한다고 가정해야 함
+    -> 어떻게 효율화할지가 중요한 열쇠!
+
+### 대규모 병렬처리 MPP massive pararell processing
+- 분산된 데이터를 읽어들여 멀티 코어를 활용하면서 디스크 I/O를 병렬적으로 처리하는 아키텍처
+- 데이터를 가능한 작게 압축하고 그것을 여러 디스크에 분산함으로써 데이터 로드에 따른 지연을 줄임
+- Amazon Redshift, Google BigQuery
+- 데이터 집계에 최적화
+- 데이터 웨어하우스와 데이터 분석용의 데이터베이스에서 특히 많이 사용됨
