--- a/빅데이터를 지탱하는 기술.md
+++ b/빅데이터를 지탱하는 기술.md
@@ -66,3 +66,27 @@
 - Amazon Redshift, Google BigQuery
 - 데이터 집계에 최적화
 - 데이터 웨어하우스와 데이터 분석용의 데이터베이스에서 특히 많이 사용됨
+
+### 행 지향 데이터베이스 row-oriented database
+- 일반적으로 업무 시스템에서 사용되는 데이터베이스는 레코드 단위의 읽고 쓰기에 최적화되어 있음
+  -> 각 행이 디스크 상에 일련의 데이터로 기록됨
+- 테이블의 각 행을 하나의 덩어리로 디스크에 저장 
+- 새 레코드를 추가할 때 파일의 끝에 데이터를 쓸 뿐이므로 빠르게 추가 가능
+  - 대량의 트랜잭션을 지연없이 처리하기 위해 데이터 추가를 효율적으로 할 수 있도록 함
+- 인덱스: 데이터 검색을 고속화하기 위함
+  - 인덱스가 없다면? 저장되는 모든 데이터를 로드해야 워하는 레코드를 찾을 수 있음 -> 많은 디스크 I/O 발생 -> 성능 저하
+- 적절한 인덱스가 사용되도록 튜닝 중요
+- 레코드 단위로 데이터가 저장되어 있어서 데이터분석에 필요 없는 열까지 로드됨
+- Oracle, MySQL
+
+### 열 지향 데이터베이스 column-oriented database
+- 빅데이터는 대부분 디스크 상에 있기 때문에 쿼리에 필요한 최소한의 데이터만을 가져옴으로써 지연이 줄어듦 
+  -> 컬럼을 압축해서 디스크 I/O 줄이기
+- 데이터분석에 사용되는 데이터베이스는 칼럼 단위 집계에 최적화
+- 데이터 분석에서는 어떤 칼럼이 사용되는지 미리 알 수 없기 때문에 인덱스를 작성했다고 해도 거의 도움 X
+  - 인덱스에 의지하지 않는 고속화 기술 필요
+- 데이터를 미리 칼럼 단위로 정리해 둠으로써 필요한 칼럼만을 로드하여 디스크 I/O를 줄임
+- 데이터 압축 효율 우수 
+  - 같은 칼럼에 유사한 데이터가 나열되는 경우: 같은 문자열의 반복은 매우 작게 압축할 수 있음
+- 데이터 종류에 따라 다르지만, 열 지향 데이터베이스는 압축되지 않은 행 지향 데이터베이스와 비교하면 1/10이하로 압축 가능
+- TeraData, Amazon Redshift
