--- a/빅데이터를 지탱하는 기술.md
+++ b/빅데이터를 지탱하는 기술.md
@@ -66,6 +66,7 @@
 - Amazon Redshift, Google BigQuery
 - 데이터 집계에 최적화
 - 데이터 웨어하우스와 데이터 분석용의 데이터베이스에서 특히 많이 사용됨
+- MPP 아키텍처에 의한 데이터 처리 병렬화 -> 쿼리 지연을 줄일 수 있음
 
 ### 행 지향 데이터베이스 row-oriented database
 - 일반적으로 업무 시스템에서 사용되는 데이터베이스는 레코드 단위의 읽고 쓰기에 최적화되어 있음
@@ -90,3 +91,24 @@
   - 같은 칼럼에 유사한 데이터가 나열되는 경우: 같은 문자열의 반복은 매우 작게 압축할 수 있음
 - 데이터 종류에 따라 다르지만, 열 지향 데이터베이스는 압축되지 않은 행 지향 데이터베이스와 비교하면 1/10이하로 압축 가능
 - TeraData, Amazon Redshift
+
+## 테이블 비정규화하기
+- 트랜잭션: 시간과 함께 생성되는 데이터를 기록한 것, 한 번 기록하면 변화하지 않음
+  - 데이터 웨어하우스에서 팩트테이블이라고 부름
+  - 집계의 기반이 되는 숫자데이터 ex. 판매액
+- 마스터: 트랜잭션에 참고되는 각종 정보, 상황에 따라 다시 쓰임
+  - 데이터 웨어하우스에서 디멘젼 테이블이라고 부름
+  - 데이터를 분류하기 위한 속성값
+
+### 스타 스키마
+- 데이터 마트를 만들 때는 팩트테이블 중심으로 여러 디멘젼 테이블을 결합하는 것이 좋은데, 그림으로 그리면 별모양이 되는 스키마
+- 데이터 마트에서 사용되는 이유
+  - 단순하기 때문에 이해하기 쉬움
+  - 데이터 분석을 쉽게 할 수 있음
+  - 성능상의 이유: 데이터 양이 증가함에 따라 팩트 테이블은 디멘젼 테이블보다 훨씬 커져 그 데이터 양이 집계 시간을 좌우함 -> 팩트 테이블을 될 수 있는 한 작게 만드는 것이 고속화에서 중요함, 팩트 테이블에는 ID와 같은 키만 남겨두고 나머지 외에는 디멘젼 테이블로 옮김
+  
+### 비정규화
+- 디멘젼 테이블을 작성하려면 정규화에의해 분해된 테이블을 최대한 결합하여 하나의 테이블로 정리
+- 그 결과가 중복이 되어도 괜찮음
+- 정규화와는 반대의 작업
+  - 비정규화 테이블: 스타스키마에서 좀 더 비정규화를 진행해 모든 테이블을 결합한 팩트 테이블 -> 열지향 스토리지는 컬럼 단위의 데이터 압축이 있어서 문자열을 그대로 저장해도 아주 작게 압축되므로 디스크 I/O의 증가가 억제되므로 데이터를 디멘젼으로 이동시킬 이유가 없어졌기 때문
