--- a/빅데이터를 지탱하는 기술.md
+++ b/빅데이터를 지탱하는 기술.md
@@ -5,6 +5,11 @@
 ### Hadoop
 - 다수의 컴퓨터에서 대향의 데이터를 처리하기 위한 시스템
 - 모여진 데이터를 나중에 집계하는 것이 목적
+- 단일 소프트웨어가 아니라 분산 시스템을 구성하는 다수의 소프트웨어로 이루어진 집합체
+- 구성요소
+  - HDFS(분산파일시스템): 하둡에서 처리되는 데이터 대부분이 저장됨, 네트워크에 연결된 파일 서버와 같은 존재지만, 다수의 컴퓨터에 파일을 복사하여 중복성을 높임
+  - YARN(리소스 관리자): CPU나 메모리 등의 계산 리소스를 관리, 애플리케이션이 사용하는 CPU 코어와 메모리를 컨테이너 단위로 관리, 하둡에서 분산 애플리케이션을 실행하면 YARN이 클러스터 전체의 부하를 보고 비어 있는 호스트부터 컨테이너를 할당
+  - MapReduce(분산 데이터 처리)
 
 ### Hive
 - SQL과 같은 쿼리 언어를 Hadoop에서 실행하기 위한 소프트웨어
