--- a/빅데이터를 지탱하는 기술.md
+++ b/빅데이터를 지탱하는 기술.md
@@ -117,3 +117,19 @@
 - 그 결과가 중복이 되어도 괜찮음
 - 정규화와는 반대의 작업
   - 비정규화 테이블: 스타스키마에서 좀 더 비정규화를 진행해 모든 테이블을 결합한 팩트 테이블 -> 열지향 스토리지는 컬럼 단위의 데이터 압축이 있어서 문자열을 그대로 저장해도 아주 작게 압축되므로 디스크 I/O의 증가가 억제되므로 데이터를 디멘젼으로 이동시킬 이유가 없어졌기 때문
+
+### Hive
+- 대량의 비구조화 데이터를 가공하는 무거운 배치처리
+- 높은 처리량으로 리소스를 활용할 수 있음
+
+### Impala, Presto
+- 구조화 데이터를 대화식으로 집계하고자 할 때
+
+### Spark 
+- 다량의 메모리를 활용하여 고속화를 실현하는 것
+- Hadoop을 대체하는 것이 아니라 MapReduce를 대체하는 존재
+- HDFS나 YARN 등을 Spark에서 그대로 사용 할 수 있음
+- Hadoop을 사용하지 않는 구성도 가능 -> S3를 이용하거나 카산드라에서 데이터를 읽어 들이는 것도 가능
+- 실행은 자바의 런타임 필요
+- Spark 상에서 실행되는 데이터 처리는 스크립트 언어를 사용 가능 ex. 자바, 스칼라, 파이썬, R
+- 
