--- a/빅데이터를 지탱하는 기술.md
+++ b/빅데이터를 지탱하는 기술.md
@@ -13,6 +13,24 @@
 
 ### Hive
 - SQL과 같은 쿼리 언어를 Hadoop에서 실행하기 위한 소프트웨어
+- 배치형 쿼리엔진, 데이터베이스가 아닌 데이터 처리를 위한 배치 처리 구조
+- 시간이 걸리는 배치 처리는 원칙적으로 Hive를 사용해야 함
+  - ex. 비정규화 테이블이 수억 레코드나 되면, 그것을 데이터 마트로 내보내는 것만으로도 상당한 시간이 소요됨 -> 그러면 쿼리 엔진 자체의 성능은 최종적인 실행시간에 그다지 많은 영향을 끼지치 않음 -> 그렇다면 배치형 시스템을 사용하는 편이 리소스의 효용을 높일 수 있음
+- 쿼리 개선 예
+  - 서브 쿼리 안에서 레코드 수를 줄이는 방법 -> 초기에 팩트 테이블을 작게 하는 것
+  - 데이터의 편향을 방지하는 방법
+- 대량 출력을 수반하는 대규모 데이터 처리에 적합하지만, 작은 쿼리를 여러번 실행하는 대화형 처리에는 적합하지 않음
+
+### Presto
+- 대화형 쿼리 엔진 -> 쿼리 실행의 지연을 감소시키는 것을 목적으로 개발된 것
+- 전용 스토리지를 갖고 있지 않으므로 Hive와 마찬가지로 다양한 데이터 소스에서 직접 데이터를 읽어 들임
+- 성능을 최대한 발휘하려면 원래 스토리지가 열 지향 데이터 구조로 되어있어야 함
+- ORC 형식의 로드에 최적화되어 있으며, 그것을 확장성이 높은 분산 스토리지에 배치하여 최대의 성능 발휘
+- 데이터의 로딩 속도를 높이려면 Presto 클러스터를 분산 스토리지와 네트워크의 가까운 곳에 설치한 후에 그것들을 가능한 한 고속 네트워크에 연결하도록 해야 함
+- SQL 실행에 특화된 시스템 -> 쿼리를 분석하여 최적의 실행 계획을 생성하고, 그것을 자바의 바이트 코드로 변환함
+- Presto 쿼리는 일단 실행이 시작되면 중간에 끼어들 수 없기 때문에, 너무 큰 쿼리를 실행해서는 안됨
+- 
+
 
 ### NoSQL
 - 빈번한 읽기/쓰기 및 분산 처리가 강점
@@ -132,4 +150,8 @@
 - Hadoop을 사용하지 않는 구성도 가능 -> S3를 이용하거나 카산드라에서 데이터를 읽어 들이는 것도 가능
 - 실행은 자바의 런타임 필요
 - Spark 상에서 실행되는 데이터 처리는 스크립트 언어를 사용 가능 ex. 자바, 스칼라, 파이썬, R
-- 
+
+## 분산 시스템 성능 향상
+- 데이터 편차 최대한 없애고, 모든 노드에 데이터가 균등하게 분산되도록 해야 함
+- SELECT DISTINCT 로 중복을 제거함으로써 부하를 잘 분산하면서 데이터 양을 줄일 수 있음
+
