--- a/빅데이터를 지탱하는 기술.md
+++ b/빅데이터를 지탱하는 기술.md
@@ -29,7 +29,13 @@
 - 데이터의 로딩 속도를 높이려면 Presto 클러스터를 분산 스토리지와 네트워크의 가까운 곳에 설치한 후에 그것들을 가능한 한 고속 네트워크에 연결하도록 해야 함
 - SQL 실행에 특화된 시스템 -> 쿼리를 분석하여 최적의 실행 계획을 생성하고, 그것을 자바의 바이트 코드로 변환함
 - Presto 쿼리는 일단 실행이 시작되면 중간에 끼어들 수 없기 때문에, 너무 큰 쿼리를 실행해서는 안됨
-- 
+- 쿼리의 실행 과정에서 디스크에 쓰기를 하지 않음 -> 모든 데이터 처리를 메모리상에서 실시하고 메모리가 부족하면 여유가 생길 때까지 기다리거나 오류로 실패함
+- 단시간 쿼리 실행에 사용하는 것이 효율적
+- 기본적으로 분산 결합(distribute join) 실시 -> 갖은 키를 갖는 데이터는 동일한 노드에 모임
+  - 분산 결합에서는 노드 간의 데이터 전송을 위한 네트워크 통신이 발생 -> 종종 쿼리 지연 초래
+  - 한 쪽 테이블이 충분히 작은 경우에는 브로드캐스트 결합(broadcast join)을 사용하여 처리 속도를 크게 고속화할 수 있음
+  - 브로드캐스트 결합을 유효로 하려면 분산 결합을 명시적으로 무효화해야 함 + 쿼리 안에 SELECT 문으로 먼저 팩트 테이블을 지정하여 그것에 디멘젼 테이블을 결합해야 함
+- 열 지향 스토리지의 집계를 매우 빠르게 실행할 수 있음
 
 
 ### NoSQL
@@ -155,3 +161,9 @@
 - 데이터 편차 최대한 없애고, 모든 노드에 데이터가 균등하게 분산되도록 해야 함
 - SELECT DISTINCT 로 중복을 제거함으로써 부하를 잘 분산하면서 데이터 양을 줄일 수 있음
 
+
+## 데이터 분석의 프레임워크 선택하기
+### MPP 데이터 베이스
+- 스토리지 및 계산 노드가 일체화되어 있어 처음에 ETL 프로세스 등으로 데이터를 가져오는 절차가 필요함
+- 시각화를 위한 데이터 마트로 생각하면 유력함
+- 비정규ㅘ 테이블을 고속으로 집계하는 데에 최적
