--- a/빅데이터를 지탱하는 기술.md
+++ b/빅데이터를 지탱하는 기술.md
@@ -166,4 +166,25 @@
 ### MPP 데이터 베이스
 - 스토리지 및 계산 노드가 일체화되어 있어 처음에 ETL 프로세스 등으로 데이터를 가져오는 절차가 필요함
 - 시각화를 위한 데이터 마트로 생각하면 유력함
-- 비정규ㅘ 테이블을 고속으로 집계하는 데에 최적
+- 비정규화 테이블을 고속으로 집계하는 데에 최적
+
+### Hive
+- 대규모 배치 처리를 꾸준히 실행 가능
+- 데이터양에 좌우되지 않는 쿼리 엔진으로 계속 이용될 것
+
+### Presto
+- Hive와 정 반대인 쿼리 엔진으로, 속도로 인해 다양한 것을 희생
+- 쿼리 실행 중 장애가 발생하면 오류가 떠서 처음부터 다시 실행
+- 메모리가 부족하면 쿼리를 실행할 수 없는 경우도 있음
+- 그러나 원래 실행이 아주 빨라서 오류가 발생하면 다시 반복해서 사용 
+- 대화식 쿼리에 특화되어 있기 때문에 텍스트 처리가 중심이 되는 ETL프로세스 및 데이터 구조화에는 적합하지 않음
+  - 데이터 구조화에는 Hive, Spark가 좋다
+- 단시간에 대량의 리소스를 소비하기 때문에 너무 무리하게 사용하면 다른 쿼리를 실행할 수 없음
+
+### Spark
+- SQL에 특화한 쿼리 엔진은 아님
+- 인 메모리의 데이터 처리가 중심이며, Presto뿐만 아니라 대화형 쿼리 실행에 적합함
+- 장점은 SQL이라기보단, ETL 프로세스에서 SQL에 이르기 까지의 일련의 흐름을 하나의 데이터 파이프라인으로 기술할 수 있다는 점
+- Spark 하나로 Hive에 의한 데이터구조화와 Presto에 의한 SQL실행을 하나의 스크립트에서 실행할 수 있음
+  - 텍스트 데이터를 읽어 열 지향 스토리지로 변환하고 SQL로 집계해서 결과를 내보내는 등 일련의 프로세스를 한 번의 데이터 처리로 기술 가능
+- 메모리를 어떻게 관리하느냐가 중요함
