--- a/빅데이터를 지탱하는 기술.md
+++ b/빅데이터를 지탱하는 기술.md
@@ -188,3 +188,17 @@
 - Spark 하나로 Hive에 의한 데이터구조화와 Presto에 의한 SQL실행을 하나의 스크립트에서 실행할 수 있음
   - 텍스트 데이터를 읽어 열 지향 스토리지로 변환하고 SQL로 집계해서 결과를 내보내는 등 일련의 프로세스를 한 번의 데이터 처리로 기술 가능
 - 메모리를 어떻게 관리하느냐가 중요함
+
+## 데이터 전송 구조
+## 벌크형
+- 전통적인 데이터 웨어하우스에서 사용된 것
+- 과거에 축적된 대량의 데이터가 이미 이는 경우나 기존의 데이터베이스에서 데이터를 추출하고 싶을 경우
+- 데이터가 처음부터 분산 스토리지에 저장되어 있는 것이 아니라면 ETL 서버 설치 
+- 데이터 전송의 신뢰성이 중요한 경우 -> 여러번 데이터 전송을 재실행할 수 있다는 점이 장점
+  - cf.스트리밍 형의 데이터 전송은 나중에 재실행하기 쉽지 않기 때문
+- 워크플로 관리 도구와 궁합이 뛰어남 -> 벌크형 데이터 전송은 워크플로 관리 도구와 조합시켜 도입
+  - 정기적인 스케줄 실행 및 오류 통지 등은 워크플로 관리 도구에 맡기고 있음
+  - 매일매일 마스터 데이터의 스냅샷과 신뢰성이 중시되는 과금 데이터 전송 등은 다른 배치 처리와 함께 워크플로 일부에 포함시키는 것이 좋음
+
+## 스트리밍형
+- 데이터가 처음부터 분산 스토리지에 저장되어 있는 것이 아니라면 
