--- a/빅데이터를 지탱하는 기술.md
+++ b/빅데이터를 지탱하는 기술.md
@@ -200,5 +200,17 @@
   - 정기적인 스케줄 실행 및 오류 통지 등은 워크플로 관리 도구에 맡기고 있음
   - 매일매일 마스터 데이터의 스냅샷과 신뢰성이 중시되는 과금 데이터 전송 등은 다른 배치 처리와 함께 워크플로 일부에 포함시키는 것이 좋음
 
-## 스트리밍형
-- 데이터가 처음부터 분산 스토리지에 저장되어 있는 것이 아니라면 
+## 이벤트 시간에 의한 집계의 효율화
+## 시계열 인덱스
+- Cassandra와 같은 시계열 인덱스에 대응하는 분산 데이터베이스를 이용하면 처음부터 이벤트 시간으로 인덱스 된 테이블을 만들 수 있음
+- 시계열 인덱스를 사용하면 매우 짧은 범위의 특정 시간에 맞춘 데이터 집계를 빠르게 실행할 수 있음
+- 장기간에 걸쳐서 대량의 데이터를 집계하는 경우에는 분산 데이터베이스가 그다지 효율적이지 않음
+
+## 조건절 푸쉬다운
+- 통계를 이용하여 필요 최소한의 데이터만 읽도록 하는 최적화
+- 데이터를 정렬해둠으로써 조건절 푸시다운에 의한 최적화가 작동해 풀 스캔을 피할 수 있게 됨
+
+### 분산 KVS distributed Key-Value Store
+- 모든 데이터를 키값 쌍으로 저장하도록 설계된 데이터 저장소
+- 모든 데이터에 고유의 키를 지정하고 그것을 부하 분산을 위해 이용
+- 키가 정해지면 그 값을 클러스터 내의 어느 노드에 배치할 것인지 결정 -> 이 구조에 의해 노드 간에 부하를 균등하게 분산하고 노드를 증감하는 것만으로 클러스터의 성능을 변경할 수 있게 되어 있음
