--- a/빅데이터를 지탱하는 기술.md
+++ b/빅데이터를 지탱하는 기술.md
@@ -214,3 +214,26 @@
 - 모든 데이터를 키값 쌍으로 저장하도록 설계된 데이터 저장소
 - 모든 데이터에 고유의 키를 지정하고 그것을 부하 분산을 위해 이용
 - 키가 정해지면 그 값을 클러스터 내의 어느 노드에 배치할 것인지 결정 -> 이 구조에 의해 노드 간에 부하를 균등하게 분산하고 노드를 증감하는 것만으로 클러스터의 성능을 변경할 수 있게 되어 있음
+
+### Amazon DynamoDB
+- 항상 안정된 읽기 쓰기 성능을 제공하도록 디자인된 분산형 NoSQL 데이터베이스
+- 하나 또는 두 개의 키에 연결하는 형태로 임의의 스키마리스 데이터를 저장할 수 있음
+- json과 같이 중첩된 데이터 구조도 취급할 수 있어 간단한 분산 KVS라기보다는 도큐먼트 스토어로 사용할 수 있음
+- P2P형 문산 아키텍터를 갖고 있음
+- 미리 설정한 초단위의 요청 수에 따라 노드가 증감되는 특징이 있음 -> 읽기 및 쓰기에 지연이 발생하면 곤란한 어플리케이션에 유용
+- DynamoDB의 데이터를 분석하려면, 동일하게 AWS 서비스인 EMR 및 Redshift 등과 결합하여 Hive에 의한 배치 처리를 실행하거나 데이터 웨어하우스에 데이터를 전송하도록 함
+
+### 와이드 칼럼 스토어 
+- 분산 KVS를 발전시켜 2개 이상의 임의의 키에 데이터를 저장할 수 있도록 한 것
+- 내부적으로 행 키와 칼럼 명의 조합에 대해 값을 저장
+- 테이블에 새로운 행을 추가하는 것과 마찬가지로 칼럼도 얼마든지 추가할 수 있는 구조
+- 수억의 칼럼을 만들 수 있음
+- 하나의 테이블에 가로와 세로의 2차원에 데이터를 쓸 수 있도록 한 것
+- 데이터를 집계하는 데는 적합하지 않음 -> 집계를 위해서는 분산된 모든 노드에서 데이터를 모아야 하기 때문
+
+### Apache Cassandra
+- 내부적인 데이터 저장소로 와이드 칼럼 스토어를 이용하면서도 'CQL'이라는 높은 수준의 쿼리 언어가 구현되어 있어 SQL과 동일한 감각으로 테이블 조작 가능
+- 테이블의 스키마를 결정할 필요가 있기 때문에 구조화 데이터만을 취급할 수 있음
+- 언뜻보면 RDB와 비슷하지만, 쿼리의 의미는 SQL과는 많은 점에서 다름
+- P2P형 분산 아키텍처를 가짐
+- 지정한 키에 의해 결정한 노드에 해당 키와 관련된 모든 값을 저장
