--- a/빅데이터를 지탱하는 기술.md
+++ b/빅데이터를 지탱하는 기술.md
@@ -237,3 +237,23 @@
 - 언뜻보면 RDB와 비슷하지만, 쿼리의 의미는 SQL과는 많은 점에서 다름
 - P2P형 분산 아키텍처를 가짐
 - 지정한 키에 의해 결정한 노드에 해당 키와 관련된 모든 값을 저장
+
+### 도큐먼트 스토어
+- NoSQL 데이터베이스를 대표하는 또 하나의 형태
+- 데이터 처리의 유연성을 목적 -> JSON처럼 복잡하게 뒤얽힌 스키마리스 데이터를 그대로의 형태로 저장하고 쿼리를 실행할 수 있도록 함
+  - 와이드 칼럼 스토어가 주로 성능 향상을 목표로 함
+- 배열과 연상 배열(맵 형)과 같은 중첩된 데이터 구조에 대해 인덱스를 만들거나 도큐먼트 일부만을 치환하는 식의 쿼리를 쉽게 실행할 수 있음
+- 스키마를 정하지 않고 데이터를 처리할 수 있음 -> 외부에서 들여온 데이터를 저장하는데 적합
+
+### MongoDB
+- 오픈소스의 분산형 도큐먼트 스토어
+- 자바스크립트나 각종 프로그래밍언어를 사용하여 데이터를 읽고 쓸 수 있음
+- 여러 노드에 데이터를 분산할 수 있지만, 그 자체는 대량의 데이터를 집계하는 데 적합하지 않음
+- 데이터 분석이 목적인 경우, 역시 쿼리 엔진으로부터 접속하는 등 데이터를 추출할 필요 있음
+
+### 검색 엔진
+- 텍스트 데이터를 전문 검색하기 위해 '역 색인'을 만드는 부분
+- 데이터를 기록하는 시스템 부하 및 디스크 소비량은 커지지만, 그 덕분에 키워드 검색이 훨씬 고속화됨
+- 색인을 만듦으로써 데이터를 찾는 것에 특화 -> 데이터 집계에 적합
+  - NoSQL 데이터베이스가 성능 향상을 위해 색인 작성 제한
+- 장기적으로 데이터를 축적하기보다는 실시간 집계 시스템의 일부로 이용됨
