--- a/빅데이터를 지탱하는 기술.md
+++ b/빅데이터를 지탱하는 기술.md
@@ -257,3 +257,21 @@
 - 색인을 만듦으로써 데이터를 찾는 것에 특화 -> 데이터 집계에 적합
   - NoSQL 데이터베이스가 성능 향상을 위해 색인 작성 제한
 - 장기적으로 데이터를 축적하기보다는 실시간 집계 시스템의 일부로 이용됨
+
+### Elastic Search
+- 오픈소스의 검색 엔진
+- Logstash: 로그 수집 소프트웨어
+- Kibana: 시각화 소프트웨어
+- 임의의 JSON 데이터를 저장할 수 있기 때문에 도큐먼트 스토어와 비슷하지만, 아무것도 지정하지 않으면 모든 필드에 색인이 만들어짐
+- 텍스트 데이터에서는 역 색인이 구축됨
+- 간단한 도큐먼트 스토어와 비교하면 쓰기의 부하가 큼
+- 필요에 따라 명시적으로 스키마를 결정함으로써 색인을 무효로 하는 식의 튜닝이 필요
+- 자체 쿼리 언어에 의한 고급 집계 기능을 제공
+- 열 지향 스토리지에도 대응하고 있어 그것만으로도 데이터를 집계하기 위한 기반이 됨
+
+### Splunk
+- 오픈 소스는 아니지만, 상용 검색 엔진으로 텍스트 데이터를 집계하기 위한 도구
+- 주로 비정형 데이터, 웹서버나 네트워크 기기로부터 출력되는 로그 파일이나 JSON 파일을 다루어 텍스트 처리를 해야만 분석할 수 있는 데이터
+- 검색을 실핼할 때 텍스트에서 필드가 추출됨
+- 처음에 키워드 검색을 통해 로그를 찾으면 패턴 매치에 의해 키와 값이 추출됨
+- 검색할때마다 데이터가 구조화되게 되어 있어 쿼리를 다시 작성함으로써 어떤 테이블이라도 유연하게 만들어낼 수 있음
