--- a/빅데이터를 지탱하는 기술.md
+++ b/빅데이터를 지탱하는 기술.md
@@ -275,3 +275,14 @@
 - 검색을 실핼할 때 텍스트에서 필드가 추출됨
 - 처음에 키워드 검색을 통해 로그를 찾으면 패턴 매치에 의해 키와 값이 추출됨
 - 검색할때마다 데이터가 구조화되게 되어 있어 쿼리를 다시 작성함으로써 어떤 테이블이라도 유연하게 만들어낼 수 있음
+
+## 워크플로 관리 도구의 종류
+- 선언형 declarative: XML, YAML 등의 서식으로 워크플로를 기술하는 타입
+  - 미리 제공된 기능만 이용할 수 있음
+  - 누가 작성해도 동일한 워크플로가 되기 때문에 유지 보수성이 높아짐
+  - 동일 쿼리를 파라미터만 바꾸어 여러번 실행하는 경우
+  - 워크플로를 단순 반복적으로 자동 생성하는 경우
+- 스크립트형 scripting: 스크립트 언어로 워크플로를 정의하는 유형
+  - 일반적인 스크립트와 동일하게 변수 제어 구문을 사용할 수 있으므로, 태스크의 정의를 프로그래밍할 수 있음
+  - 스크립트 언어에 의해 데이터 처리를 태스크 안에서 실행하는 것도 가능
+  - 파일의 문자 코드를 변환하면서 서버에 업로드를 식 태스트에 유리함 
