--- a/빅데이터를 지탱하는 기술.md
+++ b/빅데이터를 지탱하는 기술.md
@@ -286,3 +286,47 @@
   - 일반적인 스크립트와 동일하게 변수 제어 구문을 사용할 수 있으므로, 태스크의 정의를 프로그래밍할 수 있음
   - 스크립트 언어에 의해 데이터 처리를 태스크 안에서 실행하는 것도 가능
   - 파일의 문자 코드를 변환하면서 서버에 업로드를 식 태스트에 유리함 
+
+### 백필 backfil
+- 실패한 플로우를 복구하는 방법 중 하나
+- 플로우 전체를 처음부터 다시 실행하는 것
+
+
+### DAG
+- 새로운 프레임워크에 공통으로 들어가는 것 -> DAG
+- DAG: 방향성 비순환 그래프 Directed acyclic graph
+  - 노드와 노드가 화살표로 연결된다(방향성)
+  - 화살표를 아무리 따라가도 동일 노드로는 되돌아오지 않는다(비순환)
+  - DAG의 노드를 다시 나열하면, 화살표의 순서 관계를 유지하면서 하나의 순열로 할 수 있다(위상정렬)
+- 데이터 플로우에서는 실행해야 할 일련읱 태스크를 DAG에 의한 데이터 구조로 표현함
+- DAG를 구성하는 각 노드가 모두 동시 병행으로 실행됨
+- DAG에 의한 프로그래밍 특징 -> 지연평가 lazy evaluation
+  - 프로그램의 각 행은 실제로는 DAG의 데이터 구조를 조립하고 있을 뿐, 거기서 특별히 뭔가를 처리하지는 않음
+  - 먼저 DAG를 구축하고 그 후에 명시적 혹은 암묵적으로 실행 결과를 요구함에 따라 데이터 처리가 시작됨
+- 먼저 데이터 파이프라인 전체를 DAG로 조립하고나서 실행에 옮김으로써 내부 스케줄러가 분산 시스템에 효과적인 실행 계획을 세워주는 것이 장점
+
+## 데이터 웨어하우스 구축
+- 로드되는 데이터를 만드는 부분까지가 데이터 플로우의 역할
+- 비구조화 데이터를 가공하여 CSV 파일 등을 만들어 분산 스토리지에 써넣음
+- 그 이후의 태스크 실행이나 SQL에 의한 쿼리의 실행은 워크플로에 맡김
+
+## 쿼리 엔진을 사용한 데이터 마트 구축
+- 구조화 데이터를 만드는 부분까지가 데이터 플로우의 역할
+- 분산 스토리지 상의 데이터를 매일 반복되는 배치로 가공하여 열 지향의 스토리지 형식으로 보관
+- 쿼리 엔진을 사용한 SQL 실행이나 그 결과를 데이터 마트에 써서 내보내는 것은 워크플로에서 실행
+
+### 배치처리
+- 데이터가 분석할 수 있게 될 때 까지 시간이 걸림
+- 집계 효율을 높이기 위해 열 지향 스토리지를 만들려고 하면, 데이터를 모아서 변환하는 데 일정 시간이 필요
+- 받은 데이터를 분산 스토리지에 보관하는 부분부터 시작하는 것
+- 대체로 1년 이상의 장기적인 데이터 분석을 예상한 스토리지를 구축하는 부분부터 시작
+- 모아둔 데이터를 한번에 처리하지 않으면 효율이 떨어지므로, 1시간마다 비교적 큰 단위로 데이터 처리
+- 배치 처리의 사이클이 올 때까지는 데이터를 볼 수 없어 실시간 집계에는 적합하지 않음
+- 과거 데이터를 집계하고 싶을 때 적합
+
+### 스트림처리
+- 분산 스토리지를 거치지 않고 계속하는 것
+- 실시간성이 우수하지만, 과거의 데이터를 취급하는 데에는 부적합
+- 처리 내용을 변경하면 새롭게 도달한 데이터에는 적용되지만, 이미 처리가 끝난 과거 데이터까지는 변경되지 않음
+- 앞으로 도달할 데이터에만 흥미가 있다면 스트림처리가 적합
+- 
