--- a/빅데이터를 지탱하는 기술.md
+++ b/빅데이터를 지탱하는 기술.md
@@ -323,10 +323,34 @@
 - 모아둔 데이터를 한번에 처리하지 않으면 효율이 떨어지므로, 1시간마다 비교적 큰 단위로 데이터 처리
 - 배치 처리의 사이클이 올 때까지는 데이터를 볼 수 없어 실시간 집계에는 적합하지 않음
 - 과거 데이터를 집계하고 싶을 때 적합
+- 먼저 데이터가 있고, 그것을 작게 나눠서 DAG로 흘려 넣음
 
 ### 스트림처리
 - 분산 스토리지를 거치지 않고 계속하는 것
 - 실시간성이 우수하지만, 과거의 데이터를 취급하는 데에는 부적합
 - 처리 내용을 변경하면 새롭게 도달한 데이터에는 적용되지만, 이미 처리가 끝난 과거 데이터까지는 변경되지 않음
 - 앞으로 도달할 데이터에만 흥미가 있다면 스트림처리가 적합
-- 
+- 끊임없이 데이터가 생성되며, 그것이 DAG 안에 흘러들어옴에 따라 처리가 진행됨
+
+## Spark 스트리밍의 DAG
+- Spark는 원래 배치 처리를 위한 분산 시스템
+- Spark 스트리밍으로 불리는 기능이 통합됨으로써 현재는 스트림 처리까지 투명하게 취급하는 프레임워크가 되었음
+- 하나의 프레임워크에서 통합적인 데이터 처리를 할 수 있는게 장점
+
+### 람다 아키텍처
+- 데이터 파이프라인을 3개의 레이어로 구분
+- 배치 레이어: 반드시 모든 데이터를 처리
+  - 과거의 데이터를 장기적인 스토리지에 축적하고, 여러번이고 다시 집계할 수 있도록
+  - 대규모 배치처리를 실행할 수 있는 반면에, 1회 처리에는 긴 시간이 걸림
+- 서빙 레이어: 배치처리의 결과를 접근
+  - 여기에 응답이 빠른 데이터베이스를 설치하여 집계 결과를 바로 추출하도록
+  - 배치 뷰: 서빙 레이어에서 얻어진 결과 -> 정기적으로 업데이트되지만, 실시간 정보를 얻을 수 없음
+- 스피드 레이어: 스트림처리를 위함
+  - 실시간 뷰: 스피드 레이어에서 얻은 결과 -> 배치 뷰가 업데이트될 때 까지만 이용되고, 오래된 데이터를 순서대로 삭제됨
+- 배치뷰와 실시간뷰를 모두 조합시키는 형태로 쿼리 진행
+- 배치 처리와 스트림 처리의 결점을 보완하고자 하는 아키텍처
+- 장점
+  - 실시간 뷰의 결과는 나중에 배치뷰로 치환된다는 것
+  - 스트림 처리의 결과는 일시적으로만 사용되고, 잠시 기다리면 배치 처리에 의해 올바른 결과를 얻을 수 있음
+  - 스트림 처리가 정확하지 않아도 길게 보면 문제가 없음
+  - 배치처리만 안정되게 동작하고 있다면 스트림처리를 다시 실행할 필요가 없음
