--- a/빅데이터를 지탱하는 기술.md
+++ b/빅데이터를 지탱하는 기술.md
@@ -354,3 +354,25 @@
   - 스트림 처리의 결과는 일시적으로만 사용되고, 잠시 기다리면 배치 처리에 의해 올바른 결과를 얻을 수 있음
   - 스트림 처리가 정확하지 않아도 길게 보면 문제가 없음
   - 배치처리만 안정되게 동작하고 있다면 스트림처리를 다시 실행할 필요가 없음
+- 단점
+  - 나쁜 개발 효율 -> 스피드 레이어와 배피 레이어는 모두 똑같은 처리를 구현하고 있어서 번거로움
+
+### 카파 아키텍처
+- 람다 아키텍처를 단순화한 것
+- 람다 아키텍처로부터 배치 레이어나 서빙 레이어를 완전히 제거하고 스피드 레이어만 남김
+- 대신 메시지 브로커의 데이터 보관 기간을 충분히 길게하여 문제가 일어났을 때 메시지 배송 시간을 과거로 다시 설정 -> 과거의 데이터가 다시 스트림 처리로 흘러 들어 실질적으로 재실행이 이루어짐
+- 배치처리와 같은 과거 데이터의 일괄처리를 스트림 처리만으로 실행할 수 있음
+- 단점
+  - 부하가 높아진다는 것
+  - 스트림 처리의 데이터 플로우에 대량의 과거 데이터를 흘려보내면, 평상시와 비교해 많은 자원을 일시적으로 소비하게 됨
+
+### 아웃 오브 오더의 데이터 문제
+- 늦게 도달하는 메시지, 즉 프로세스 시간과 이벤트 시간의 차이
+- 이벤트 시간 윈도윙: 이벤트 시간에 의해 윈도우를 나누는 것
+- 이벤트 시간으로 보면, 메시지가 배송된 데이터는 무작위 순으로 나열된, 즉 아웃 오브 오더 상태이므로, 적절히 순서를 바꿔 집계 결과를 업데이트해야 함
+
+
+### Amazon Redshift
+- 데이터 웨어하우스를 위한 MPP데이터베이스
+- 스토리지와 계산 노드가 일체화되어 있어 보존할 데이터 양이 늘어나면 그것에 맞추어서 노드를 확정할 필요가 있음
+- 전통적인 데이터 웨어하우스와 같은 구조여서 이용 빈도가 적은 데이터를 대량으로 보존해두는 데에는 그다지 적합하지 않음
