--- a/실무로 배우는 빅데이터 기술.md
+++ b/실무로 배우는 빅데이터 기술.md
@@ -31,3 +31,22 @@
 - 하둡 파일 시스템에 접근하려는 클라이언트 에코시스템은 AS 인증서버를 통해 최초 인증을 수행
 - TGS 티켓 발행 서버로부터 하둡 파일시스템에 접근을 허용하는 티켓을 발행받음
 - 이후부터는 유효한 티켓만 있으면 하둡 파일시스템에 인증없이 접근할 수 있음
+
+## 빅데이터 수집 기술
+### 플럼 Flume
+- 빅데이터를 수집할 때 다양한 수집 요구사항들을 해결하기 위한 기능으로 구성된 소프트웨어
+- 플럼 아키텍처: Source, Channel, Sink
+  - Source: 데이터 로드
+  - Channel: 데이터 임시 저장
+  - Sink: 목적지에 데이터 최종 적재
+- 활용 방안: 스마트카에서 발생하는 로그를 직접 수집하는 역할 담당
+
+### 카프카 Kafka
+- MOM 소프트웨어 중 하나
+- 대규모로 발생하는 메시지성 데이터를 비동기 방식으로 중계하는 역할
+- 원천 시스템으롭터 대규모 트랜잭션 데이터가 발생했을 때 중간에 데이터를 버퍼링하면서 타깃 시스템에 안정적으로 전송해주는 역할
+- 카프카 아키텍처: 주키퍼를 반드시 이용해야 함
+- 활용 방안
+  - 플럼이 실시간 데이터를 수집해 카프카 토픽에 전송하면 카프카는 전송받은 데이터를 토픽에 임시 저장하고 있다가 컨슈머 프로그램이 작동해 토픽에서 데이터를 가져감
+  - 플럼이 아주 빠르게 발생하는 데이터를 실시간으로 수집하게되면 이를 최종 목적지에 전달하기 전 중간에서 안정적인 버퍼링 처리가 필요해서
+  - 카프카와 같은 대규모 중간 저장소가 완충역할 -> 안정적인 수집 아키텍처 구성 가능
