--- a/실무로 배우는 빅데이터 기술.md
+++ b/실무로 배우는 빅데이터 기술.md
@@ -50,3 +50,23 @@
   - 플럼이 실시간 데이터를 수집해 카프카 토픽에 전송하면 카프카는 전송받은 데이터를 토픽에 임시 저장하고 있다가 컨슈머 프로그램이 작동해 토픽에서 데이터를 가져감
   - 플럼이 아주 빠르게 발생하는 데이터를 실시간으로 수집하게되면 이를 최종 목적지에 전달하기 전 중간에서 안정적인 버퍼링 처리가 필요해서
   - 카프카와 같은 대규모 중간 저장소가 완충역할 -> 안정적인 수집 아키텍처 구성 가능
+
+## 빅데이터 적재 기술
+### 하둡 Hadoop
+- 대용량 데이터 분산 저장
+- 분산 저장된 데이터 가공/분석 처리 기능: 분산 병렬 처리 기술 사용
+  - 맵리듀스 MapReduce: 아래 두가지를 쉽고 편리하게 지원하는 프레임워크
+  - 분산 병렬 처리에서의 핵심은 여러 컴퓨터에 분산 저장돼 있는 데이터로부터 어떻게 효율적으로 일을 나눠서(map) 실행시킬 수 있느냐
+  - 다음으로 여러 컴퓨터가 나눠서 실행한 결과들을 어떻게 하나로 모으냐(reduce)
+- 활용 방안
+  - HDFS의 특정 디렉터리에 일자 단위로 파티션하여 저장하기 위해 하이브를 사용하는데, 대규모 하이브 작업을 위해 맵리듀스 프로세스가 내부적으로 작동
+
+### 주키퍼 Zookeeper
+- 빅데이터 분산 환경을 더욱 효율적으로 관리하기 위해 서버 간의 정보를 쉽고 안전하게 공유해야 함
+- 공유된 정보를 이용해 서버 간의 중요한 이벤트를 관리하면서 상호작용을 조율해주는 코디네이터 시스템 필요 -> 분산 코디네이터인 주키퍼
+- 주키퍼는 하둡, HBase, 카프카, 스톰 등의 분산 노드 관리에 사용 중
+- 주키퍼 아키텍처
+  - 3대 이상의 홀수 개의 서버로 구성돼야 함
+  - 리더 서버: 반드시 1개 서버 -> 다른 모든 팔로워 서버에 요청받은 ZNode 정보를 브로드캐스트함
+  - 팔로워 서버: 나머지 서버 -> 팔로워 서버 1에 저장된 ZNode 정보는 리더서버에 전달됨
+- 활용 방안: 하둡, HBase, 카프카, 스톰의 내부에서 주키퍼에 의존해 클러스터 멤버십 기능 및 환경설정의 동기화 등을 사용하고 있음
