--- a/실무로 배우는 빅데이터 기술.md
+++ b/실무로 배우는 빅데이터 기술.md
@@ -70,3 +70,32 @@
   - 리더 서버: 반드시 1개 서버 -> 다른 모든 팔로워 서버에 요청받은 ZNode 정보를 브로드캐스트함
   - 팔로워 서버: 나머지 서버 -> 팔로워 서버 1에 저장된 ZNode 정보는 리더서버에 전달됨
 - 활용 방안: 하둡, HBase, 카프카, 스톰의 내부에서 주키퍼에 의존해 클러스터 멤버십 기능 및 환경설정의 동기화 등을 사용하고 있음
+
+## 빅데이터 실시간 적재 기술
+### HBase
+- NoSQL 데이터베이스
+  - 데이터를 키/값 구조로 단순화
+  - 칼럼 또는 도큐먼트 형식의 제약사항이 적은 스키마 모델로 만들어 고성능 쓰기/읽기가 가능
+- HBase: 하둡 기반의 컬럼 지향 NoSQL 데이터베이스
+  - 스키마 변경이 자유로움 
+  - 리전이라는 수십~수백 대의 분산 서버로 샤딩과 복제 등의 기능을 지원 -> 성능과 안정성 보장
+  - 하둡의 확장성과 내고장성을 그대로 이용할 수 있음 -> 대규모 실시간 데이터 처리를 위한 스피드 레이어 저장소에서 주로 사용됨
+- HBase 아키텍처
+  - 하둡의 HDFS를 기반으로 설치 및 구성됨
+  - 분산 데이터베이스 아키텍처를 채택하고 있음
+  - HDFS의 가용성과 확장성을 그대로 물려받고 있음
+- 활용 방안
+  - 카프카에 저장돼 있는 데이터를 스톰이 받아서 HBase의 테이블에 모두 적재
+  - HBase에 저장된 스마트카 운전자의 운행 정보를 특정 조건에 따라 필터링해서 신속하게 조회
+  - 하이브 핸들러를 이용해 HBase에 저장된 데이터와 하이브 데이터를 동시에 활용
+
+### 레디스 Redis
+- 분산 캐시 시스템이면서 NoSQL 데이터베이스처럼 대규모 데이터 관리 능력도 갖춘 IMDG(In-Memory Data Grid) 소프트웨어
+- 키/값 형식의 데이터 구조를 분산 서버상의 메모리에 저장하면서 고성능의 응답 속도를 보장
+- 다양한 데이터 타입을 지원하기 때문에 데이터를 구조화해서 저장할 수 있음
+- 단순 키/값 이상의 데이터 복잡성도 처리할 수 있음
+- 인메모리 데이터를 영구정으로 저장할 수 있는 스냅샷 기능 제공
+- 데이터 유실에 대비해 AOF(Append Only File) 기능으로 정합성 보장
+- NoSQL 데이터베이스의 주요 특징인 데이터의 샤딩(Shading)과 복제(Replication) 지원 -> 높은 성능이 필요한 서비스에서 많이 사용됨
+- 활용 방안
+  - 분석한 결과를 빠르게 저장하면서 주변 시스템과 공유하기 위한 저장소로 사용
