--- a/실무로 배우는 빅데이터 기술.md
+++ b/실무로 배우는 빅데이터 기술.md
@@ -99,3 +99,29 @@
 - NoSQL 데이터베이스의 주요 특징인 데이터의 샤딩(Shading)과 복제(Replication) 지원 -> 높은 성능이 필요한 서비스에서 많이 사용됨
 - 활용 방안
   - 분석한 결과를 빠르게 저장하면서 주변 시스템과 공유하기 위한 저장소로 사용
+
+### 스톰 Storm
+- 스피드 데이터를 인메모리 상에서 병렬처리하기 위한 소프트웨어
+- 스피터 데이터를 실시간으로 다루기 위해 모든 데이터를 인메모리 상에서 분산 병렬 처리
+- 분산 데이터를 통제하기 위한 강력한 기능(분리, 정제, 통합, 집계)과 아키텍처도 제공
+- 데이터 발생과 동시에 처리하는 완전 실시간 방식 -> 조금의 레이턴시도 허용되지 않는 아키텍처에 적용함
+- 아키텍처
+  - 매우 견고한 장애 복구 기능 제공
+  - 롤백 시점으로부터 데이터의 정합성 보장
+- 활용 방안
+  - 스마트카 운전자의 실시간 운행 정보를 대상으로 데이터 라우팅과 스트리밍 처리에 활용
+
+### 에스퍼 Esper
+- 실시간 스트리밍 데이터의 복잡한 이벤트 처리가 필요할 때 사용하는 룰 엔진
+- 스톰이 대규모의 실시간 데이터를 단순 가공 및 추출 처리하는 데는 문제 없지만, 실시간으로 발생하는 데이터로부터 복잡한 패턴을 찾고, 그 패턴에 따른 이벤트를 처리하는 것은 쉽지 않음
+- CEP: 실시간으로 발생하는 데이터 간의 관계를 복합적으로 판단 및 처리하는 것 -> 에스퍼 제공
+- 에스퍼를 이용하면 CEP 처리를 위한 다양한 조건과 복합 이벤트를 하나의 룰로 쉽게 정의할 수 있어 CEP 처리 및 관리가 수월
+- 아키텍처
+  - CEP 엔진 -> 여기서 엔진은 단순 자바 라이브러리 프로그램으로, 설치와 사용은 매우 간단함
+  - 애플리케이션 서버(톰캣, 제이보스, OSGI, 스톰 등) 또는 애플리케이션의 컨텍스트에 에스퍼 라이브러리 설치, 해당 라이브러리를 이용해 CEP 프로그래밍하는 단순 아기텍처
+  - 에스퍼의 EPL(Event Processing Language)을 이용해 대규모 분산 아키텍처를 구성할 때는 룰 통합 관리, 분산 노드에 일관되게 적용하기 위해 다소 복잡한 구성 필요
+  - ㄴ 분산된 응용 서버에 에스퍼 엔진을 설치, 에스퍼 엔진들이 동일한 EPL 룰을 동적으로 일괄 로딩하기 위해 EPL 공유 저장소가 이용됨
+- 활용 방안
+  - 운전자의 운행 데이터를 실시간으로 분석하기 위해 에스퍼 EPL 사용
+  - 운전자 이벤트 정보를 실시간으로 감지할 수 있도록 룰 정의
+  - 해당 이벤트 데이터를 감지 즉시 레디스에 적재되어 과속한 차량 정보만 관리할 수 있게 됨
