--- a/실무로 배우는 빅데이터 기술.md
+++ b/실무로 배우는 빅데이터 기술.md
@@ -125,3 +125,44 @@
   - 운전자의 운행 데이터를 실시간으로 분석하기 위해 에스퍼 EPL 사용
   - 운전자 이벤트 정보를 실시간으로 감지할 수 있도록 룰 정의
   - 해당 이벤트 데이터를 감지 즉시 레디스에 적재되어 과속한 차량 정보만 관리할 수 있게 됨
+
+## 빅데이터 탐색 기술
+### 하이브 Hive
+- 하둡 초창기에는 적재된 데이터를 탐색/분석하기 위한 도구로 맵리듀스를 주로 이용
+- 그러나 맵리듀스는 복잡도가 높은 프로그래밍 기술을 필요로 했음 -> 분석가들에게 빅데이터 접근을 어렵게 만듦
+- 하이브: 페이스북에서 SQL과 매우 유사한 방식으로 하둡 데이터 접근성을 높이도록 개발
+- 아키텍처
+  - 하이브 클라이언트에서 작성한 QL(Query Language)이 맵리듀스 프로그램으로 변환되어 실행된다는 것
+  - 하이브 QL이 작동하면 항상 MetaStore를 참고해 하이브의 런타임 환경이 만들어짐
+  - 쓰리프트 API 제공 -> 클라이언트 프로그램이 API를 호출해 다양한 하이브 액션을 외부에서도 실행
+- 활용 방안
+  - 데이터 웨어하우스 구축
+  - 주제 영역별 데이터 마트 구성
+- 장점
+  - 복잡한 맵리듀스를 하이브QL로 래핑해 접근성을 높임
+- 단점
+  - 맵리듀스 코어를 그대로 사용함으로써 성능면에서는 만족스럽지 못했음 -> 반복적인 대화형 연산 작업에서는 하이브가 적합하지 않음
+
+### 스파크 Spark
+- 하이브 단점을 극복하기 위해 개발
+- 고성능 인메모리 분석 -> 데이터 가공 처리를 인메모리에서 빠르게 처리
+  - 기존 맵리듀스 기반의 하이브 또는 피그의 경우 하둡의 로컬 디스트에 의존해 대량의 데이터를 로드하고 생성함으로써 높은 IO발생과 그로인한 레이턴시를 피할 수 없었음
+- 스파크SQL, 스파크 스트리밍, 스파크 머신러닝 등의 기능을 제공하고 있어 활용성이 높고 다양한 클라이언트 언어를 제공해 범용성이 뛰어남
+- 스파크 코어의 주요 기능(스케줄링, 자원관리, 장애복구, RDD 관리)에 API로 접근 가능 
+- 스파크 엔진은 대규모 분산 노드에서 최적의 성능을 낼 수 있음
+- 활용 방안
+  - 다양한 클라이언트 언어 지원
+  - SQL을 이용해 데이터 액세스 가능
+
+### 우지 Woozie
+- 복잡한 데이터 파이프라인 작업을 위해 방향성 있는 비순환 그래프(DAG)로 잡의 시작, 처리, 분기, 종점 등의 액션을 정의하는 워크플로
+- 아키텍처
+  - 우지 클라이언트에서 작성한 워크플로는 우지 서버로 전송되어 메타화되고 RDBMS에 저장됨
+  - 우지 서버에 있는 coordinator는 우지에 등록된 워크플로를 스케줄링 해줌
+  - 워크플로 엔진이 Action 노드와 Control노드의 정보를 해석하면서 관련 태스크를 하둡의 클러스터에서 실해이킴
+  - 주요 Action Task로는 하이브, 피그, 스쿱(sqoop)등이 있음
+  - 관련 Action은 최종적으로 하둡의 맵리듀스 프로그램을 기반으로 작동
+  - 실행 중인 태스크의 라이프 사이클을 우지 서버가 시작부터 종료까지 추적하면서 모니터링 정보 제공
+- 활용 방안
+  - 후처리 작업을 정의하고 프로세스화
+  - 적재된 데이터를 External -> Managed -> Mart로 이동시키기 위해 다양한 하이브QL들이 이용되고, 이를 약속된 시간에 따라 스케줄링해서 실행하는데 이때 우지 워크플로 사용
