--- a/실무로 배우는 빅데이터 기술.md
+++ b/실무로 배우는 빅데이터 기술.md
@@ -166,3 +166,35 @@
 - 활용 방안
   - 후처리 작업을 정의하고 프로세스화
   - 적재된 데이터를 External -> Managed -> Mart로 이동시키기 위해 다양한 하이브QL들이 이용되고, 이를 약속된 시간에 따라 스케줄링해서 실행하는데 이때 우지 워크플로 사용
+
+### 휴 Hue
+- 다양한 하둡 에코시스템들의 기능들을 웹 UI로ㅗ 통합 제공
+- 아키텍처
+  - 하둡 에코시스템들을 통합하기 위해 자체 플러그인을 설치하거나 API를 연동해서 에코시스템들의 주요 기능들을 웹 UI로 제공
+  - 휴 데이터베이스에서는 휴에 로그인하는 사용자의 계정 관리와 휴에서 사용할 컴포넌트(잡, 하이브, 피그, 우지 등)의 메타정보 등을 관리
+- 활용 방안
+  - HDFS, HBase, 하이브, 임팔라를 편리하게 사용하기 위한 웹 에디터 제공
+  - 데이터를 직관적으로 탐색 가능
+  - 데이터 임포트 작업 진행
+  - 주제 영역별 데이터웨어하우스 작업을 위해 휴의 Job Designer를 이용해 우지의 워크플로 5개를 주제영역별로 작성하고 실행
+
+## 빅데이터 분석
+- 기술 분석: 분석 초기 데이터의 특징을 파악하기 위해 선택, 집계, 요약 등 양적 기술 분석 진행
+- 탐색 분석: 업무 도메인 지식을 기반으로 대규모 데이터셋의 상관관계나 연관성 파악
+- 추론 분석: 전통적인 통계분석 기법으로 문제에 대한 가설을 세우고 샘플링을 통해 가설 검증
+- 인과 분석: 문제 해결을 위한 원인과 결과 변수를 도출하고 변수의 영향도 분석
+- 예측 분석: 대규모 과거 데이터를 학습해 예측 모형을 만들고, 최근의 데이터로 미래 예측
+
+## 빅데이터 분석 활용 기술
+### 임팔라 Impala
+- 실시간 빅데이터 분석 질의 가능
+- 빅데이터 분석을 인메모리 기반의 실시간 온라인 분석으로
+- 아키텍처
+  - 하둡의 분산 노드에서 대규모 실시간 분석을 위해 Impalad, Statestored, Catalogd라는 컴포넌트 설치
+  - Impalad: HDFS의 분산 노드 상에서 실행 계획과 질의 작업을 수행하는 데몬
+  - Statestored: Impalad의 기본 메타 정보부터 각 분산 노드에 설치돼 있는 Impalad를 관리하는 역할
+  - Catalogd: Impalad와 Statestored와 통신하면서 임팔라 SQL의 실행과 변경 이력을 관리
+- 활용 방안
+  - 하이브 쿼리를 임팔라 쿼리로 바꾸고 실시간 탐색 가능
+  - 하이브 쿼리는 대부분 임팔라 쿼리와 호환 가능,
+  - 임팔라가 하이브 대비 빠른 응답 속도 보장
