--- a/실무로 배우는 빅데이터 기술.md
+++ b/실무로 배우는 빅데이터 기술.md
@@ -198,3 +198,37 @@
   - 하이브 쿼리를 임팔라 쿼리로 바꾸고 실시간 탐색 가능
   - 하이브 쿼리는 대부분 임팔라 쿼리와 호환 가능,
   - 임팔라가 하이브 대비 빠른 응답 속도 보장
+
+### 제플린 zeppelin
+- 스파크 기반
+- 대용량 데이터를 효과적으로 탐색 및 분석하기 위해 대용량 데이터셋을 빠르게 파악하고 이해하기 위한 분석 및 시각화 툴
+- R의 경우, 하둡의 분산 파일을 직접 참조할 수 없고 분산 병렬처리가 어려움
+- ㄴ RHive, RHadoop, RHipe 같은 도구로 HDFS와 직접 연결해 병렬처리가 가능하도록 구성할 수 있지만 복잡도가 낲아지고 안정적인 사용을 위해서 추가 비용 발생
+- 아키텍처
+  - 웹UI의 노트북에서 스파크 또는 스파크SQL을 작성해 하둡 클러스터에 작업을 요청하고, 처리 결과를 다시 웹UI에서 시각화해서 볼 수 있음
+  - 제플린의 클라이언트와 서버 사이에는 REST 또는 웹소켓 통신을 요청하게 됨
+  - 요청된 결과에 해당하는 인터프리터가 작동해서 타깃 시스템에 작업을 요청하게 됨
+  - 스파크 뿐만 아니라 다양한 확장 인터프리터(스파크, 하이브, 플링크, R, 카산드라 등) 제공
+- 활용 방안
+  - 주제 영역별 마트에 접근해 데이터를 추출, 처리, 분석하고 그 결과를 제플린의 시각화 기능을 이용해 다양하게 분석
+
+### 머하웃 Mahout
+- 하둡 생태계에서 머신러닝 기법을 이용해 데이터 마이닝을 수행하는 툴
+- 그동안의 머신러닝 툴은 대규모의 데이터셋을 분석할 수 있게 설계되지 않았고 분산 환경에서 실행 어려움 -> 머하웃은 하둡에서 분산 머신러닝
+- 아키텍처
+  - 하둡의 분산 환경 위에 맵리듀스를 기반으로 고급 분석을 지원하는 라이브러리 패키지
+  - 하둡 클러스터 관점에서 보면 머하웃의 머신러닝 알고리즘이 맵리듀스에서 작동하도록 구현됐기 때문에 선형 확장으로 대규모(테라급 이상) 머신러닝 작업이 가능한 아키텍처를 가지고 있음
+  - 주요 라이브러리: 추천, 분류, 군집
+- 활용 방안
+  - 상품 추천
+  - 군집 분석을 통한 고객군 적정 개수 파악
+
+### 스쿱 Sqoop
+- RDBMS와 HDFS 사이에서 데이터를 편리하게 임포트하거나 익스포트해주는 소프트웨어
+- ㄴ RDBMS에 있는 데이터를 특별한 전처리 없이 곧바로 HDFS에 적재하거나 반대로 HDFS에 저장된 데이터를 RDBMS로 제공해야 하는 경우
+- 아키텍처
+  - 아키텍처1: 스쿱의 CLI로, 임포트, 익스포트 명령을 하둡에 전달하면 맵 태스크가 병렬로 실행되어 외부 데이터베이스와 HDFS 사이에서 대향의 데이터를 임포트 및 익스포트
+  - 아키텍처2: 아키텍처1 확장해서 스쿱 서버 추가, 스쿱1에서 클라이언트마다 설치됐던 커넥터와 라이브러리를 스쿱 서버에 배치하고 스쿱의 임포트, 익스포트 기능을 REST API로 제공해서 클라이언트 경량화, 접근 통제 가능
+- 활용 방안
+  - 분석된 결과를 RDBMS 시스템에 편리하게 제공하기 위한 도구로 활용 
+- 원래 스쿱은 하둡 생태계에서는 수집 기술로 분류됨!
