--- a/실무로 배우는 빅데이터 기술.md
+++ b/실무로 배우는 빅데이터 기술.md
@@ -231,4 +231,4 @@
   - 아키텍처2: 아키텍처1 확장해서 스쿱 서버 추가, 스쿱1에서 클라이언트마다 설치됐던 커넥터와 라이브러리를 스쿱 서버에 배치하고 스쿱의 임포트, 익스포트 기능을 REST API로 제공해서 클라이언트 경량화, 접근 통제 가능
 - 활용 방안
   - 분석된 결과를 RDBMS 시스템에 편리하게 제공하기 위한 도구로 활용 
-- 원래 스쿱은 하둡 생태계에서는 수집 기술로 분류됨!
+- 원래 스쿱은 하둡 생태계에서는 수집 기술로 분류됨
