--- a/하둡 완벽 가이드.md
+++ b/하둡 완벽 가이드.md
@@ -8,4 +8,17 @@
 - 대화형 분석에서는 적합하지 않음
 - 질의를 실행한 후 수 초 이내에 결과를 받는 것은 불가능
 - 일반적으로 질의를 처리하는 데 1분 이상 걸림
-- 
+
+## 하둡과 RDBMS 차이
+- 데이터셋 내부에서 처리되는 구조의 양
+- RDBMS -> 정형 데이터
+- 하둡 -> 반정형데이터, 비정형데이터
+- 읽기 시점 스키마: 유연성을 제공하고 데이터를 불러오는 비용이 많이드는 단계도 피할 수 있음, 하둡은 단순히 파일만 복사하면 됨
+- 관계형데이터는 무결성을 유지하고 중복을 제거하기 위해 주기적으로 정규화
+- 정규화는 하둡에서 문제가 되는데, 하둡은 비지역 연산으로 레코드를 읽고, 하둡의 핵심 전제는 고속의 순차적 읽기와 쓰기를 수행하는 것
+
+## 1.5.2. 그리드 컴퓨팅
+- 대규모 분산 컴퓨팅에서 수많은 프로세스를 조율하는 것은 어려움
+- 원격 프로세스가 실패했는지 정상인지 알 수 없는 것, 전체적인 계싼의 진행을 이어가는 것이 가장 어려움
+- 맵리듀스: 분산 처리 프레임워크 -> 실패한 태스크를 자동으로 감지하여 장애가 없는 머시에 다시 배치하도록 구현되어 있음 -> 개발자는 실패에 대해 크게 고민하지 않아도 됨
+- ㄴ 가능한 이유: 맵리듀스가 태스크 간의 상호 의존성이 없는 비공유 아키텍처이기 때문
