--- a/하둡 완벽 가이드.md
+++ b/하둡 완벽 가이드.md
@@ -1,6 +1,6 @@
 # 하둡 완벽 가이드
-- 빅데이터 기술의 바이
-- 블
+- 빅데이터 기술의 바이블
+- 하둡의 핵심, 하둡 에코시스템 관련 프로젝트, 하둡 사례 연구
 
 ### 맵리듀스
 - 일괄 질의 처리기
@@ -22,3 +22,20 @@
 - 원격 프로세스가 실패했는지 정상인지 알 수 없는 것, 전체적인 계싼의 진행을 이어가는 것이 가장 어려움
 - 맵리듀스: 분산 처리 프레임워크 -> 실패한 태스크를 자동으로 감지하여 장애가 없는 머시에 다시 배치하도록 구현되어 있음 -> 개발자는 실패에 대해 크게 고민하지 않아도 됨
 - ㄴ 가능한 이유: 맵리듀스가 태스크 간의 상호 의존성이 없는 비공유 아키텍처이기 때문
+
+### 2.3.1 맵과 리듀스
+- 각 단계는 입력과 출력으로 키-값의 쌍을 가짐, 그 타입은 프로그래머가 선택
+- 프로그래머는 맵 함수와 리듀스 함수를 작성해야 함
+- 맵 단계
+  - 데이터셋의 각 행의 타입을 텍스트로 인식하는 텍스트 입력 포맷을 선택
+  - 값은 각 행(문자열), 키는 파일의 시작부에서 각 행이 시작되는 지점까지의 오프셋, 여기서 키는 의미가 없으므로 무시해도 됨
+  - 맵 함수: 맵 함수는 단지 데이터의 준비 단계, 리듀스 함수를 위해 데이터를 제공하는 역할
+  - 잘못된 레코드를 걸러주는 작업을 수행
+  - 맵 함수의 출력이 리듀스 함수의 입력으로 보내지는 과정은 맵리듀스 프레임워크에 의해 처리됨
+  - 이 과정에서 키-값 쌍은 키를 기준으로 정렬되고 그룹화됨
+- 리듀스 함수
+  - 리스트 전체를 반복
+
+### 2.3.2 자바 맵리듀스
+- 맵 함수: 추상 map() 메서드를 정의하는 Mapper 클래스로 구현됨
+- 
