--- a/하둡 완벽 가이드.md
+++ b/하둡 완벽 가이드.md
@@ -38,4 +38,17 @@
 
 ### 2.3.2 자바 맵리듀스
 - 맵 함수: 추상 map() 메서드를 정의하는 Mapper 클래스로 구현됨
-- 
+- Mapper 클래스: generic 타입
+- 하둡은 최적화된 네트워크 직렬화를 위해 (내장 자바 타입 대신) 자체적으로 기본 타입 셋 제공
+- ㄴ 이러한 타입 클래스는 org.apache.hadoop.io 패키지에서 확인 가능
+- map() 메서드의 입력으로 하나의 키와 하나의 값이 전달됨
+- map() 메서드는 출력을 위해 Context의 인스턴스를 제공
+- 리듀스 함수 역시 입력과 출력 타입을 규정하기 위해 네 개의 정규 타입 매개변수 사용
+- 리듀스 함수의  입력 타입은 맵 함수의 출력 타입이었던 Text, IntWritable과 짝을 이룸
+- 잡 객체는 잡 명세서를 작성
+- 잡 명세서: 잡을 수행하는 방법을 정의, 사용자가 결정
+- 하둡 클러스터에서 잡을 실행할 때는 먼저 코들르 JAR 파일로 묶어야 함
+- JAR 파일의 이름을 명시적으로 지정하는 방법도 있지만 Job의 setJarByClass() 메서드를 이용하여 클래스를 지정하면 하둡은 해당 클래스를 포함한 관련 JAR 파일을 찾아서 클러스터에 배치해줌
+- Job 객체를 생성할 때 입력과 출력의 경로를 지정함
+- 입력 경로: FileInputFormat의 정적 메서드인 addInputPath()를 호출하여 지정
+- ㄴ 입력 경로로는 하나의 파일이나 디렉터리 또는 특정 패턴의 파일일 수 있음, 다수의 입력 경로를 지정하고 싶으면 addInputPath()를 여러번 호출
