--- a/빅데이터 - 하둡, 하이브로 시작하기.md
+++ b/빅데이터 - 하둡, 하이브로 시작하기.md
@@ -46,3 +46,28 @@
 - H마스터가 H리전을 관리하하는 구조
 - 주키퍼거 H마스터를 관리하여 SPOF를 회피
   - SPOF: 단일 장애 지점, 동작하지 않으면 전체 시스템이 중단되는 요소
+
+### 데이터 처리 
+### 맵리듀스 MapReduce
+- HDFS 상에서 동작하는 가장 기본적인 분석 기술
+- 간단한 단위 작업을 반복할 때 효율적인 맵리듀스 모델을 사용히여 데이터 분석
+
+### 스파크 Spark
+- 인메모리 기반의 범용 데이터 처리 플랫폼
+- ㄴ 인메모리: 인-메모리 컴퓨팅은 메모리 내에서 데이터의 저장 뿐 아니라 데이터의 연산까지 수행하는 최첨단 칩 기술,메모리 내 대량의 정보를 이동 없이 메모리 내에서 병렬 연산하기 때문에 전력 소모가 낮음
+
+### 임팔라 Impala
+- 하둡 기반 분산 쿼리 엔진
+- 맵리듀스를 사용하지 않고, C++로 개발한 인메모리 엔진을 사용해 빠른 성능을 보여줌
+- 데이터 조회를 위한 인터페이스로 HiveQL 사용
+
+### 프레스토 Presto
+- 대화형 질의를 처리하기 위한 분산 쿼리 엔진
+- 메모리 기반으로 데이터 처리
+- 다양한 데이터 저장소에 저장된 데이터를 SQL로 처리 가능
+
+### 하이브
+- 하둡 기바느이 데이터웨어하우징용 솔루션
+- SQL과 애무 유사한 HiveQL 사용
+- ㄴ HiveQL은 내부적으로 맵리듀스 잡으로 변환되어 실행됨
+- 
