--- a/빅데이터 - 하둡, 하이브로 시작하기.md
+++ b/빅데이터 - 하둡, 하이브로 시작하기.md
@@ -66,8 +66,24 @@
 - 메모리 기반으로 데이터 처리
 - 다양한 데이터 저장소에 저장된 데이터를 SQL로 처리 가능
 
-### 하이브
-- 하둡 기바느이 데이터웨어하우징용 솔루션
+### 하이브 Hive
+- 하둡 기반의 데이터웨어하우징용 솔루션
 - SQL과 애무 유사한 HiveQL 사용
 - ㄴ HiveQL은 내부적으로 맵리듀스 잡으로 변환되어 실행됨
+
+### HCatalog
+- Pig, MapReduce, Spark에서 Hive 메타스토어 테이블에 액세스할 수 있는 도구
+- 테이블을 생겅하거나 기타 작업을 수행할 수 있는 REST 인터페이스 및 커맨드라인 클라이언트 제공
+
+### 피그 Pig
+- 복잡한 맵리듀스 프로그래밍을 대체할 피그 라틴(Pig Latin)이라는 자체 언어를 제공
+- 맵리듀스 API를 매우 단순화한 형태
+- SQL과 유사한 형태로 설계되었음
+- 다만 기존 SQL 지식을 활용하기 어려움
+
+### 클러스터 관리
+### 얀 YARN
+- 데이터 처리 작업을 실행하기 위한 클러스터 자원(CPU, 메모리, 디스크 등)과 스케쥴링을 위한 프레임워크
+- 기존 하둡의 맵리듀스의 단점을 극복하기 위해 시작됨
+- 맵리듀스, 하이브, 임팔라, 타조, 스파크 등 다양한 애플리케이션들은 얀에서 리소스를 할당받아서 작업을 실행하게 됨
 - 
