--- a/빅데이터 - 하둡, 하이브로 시작하기.md
+++ b/빅데이터 - 하둡, 하이브로 시작하기.md
@@ -86,4 +86,26 @@
 - 데이터 처리 작업을 실행하기 위한 클러스터 자원(CPU, 메모리, 디스크 등)과 스케쥴링을 위한 프레임워크
 - 기존 하둡의 맵리듀스의 단점을 극복하기 위해 시작됨
 - 맵리듀스, 하이브, 임팔라, 타조, 스파크 등 다양한 애플리케이션들은 얀에서 리소스를 할당받아서 작업을 실행하게 됨
-- 
+
+### 메소스 Mesos
+- 클라우드 인프라 및 컴퓨팅 엔진의 다양한 자원(CPU, 메모리, 디스크)을 통합적으로 관리할 수 있도록 만든 자원 관리 프로젝트
+- 클러스터링 환경에서 동적으로 자원을 할당하고 격리해주는 메커니즘 제공 -> 분산 환경에서 작업 실행을 최적화할 수 있음
+- 1만대 이상의 노드에도 대응 가능
+
+### 분산 서버 관리
+- 클러스터에서 여러가지 기술이 이용될 때 하나의 서버에서 모든 작업이 진행되면 이 서버가 SPOF가 됨
+- 이로 인한 리스크를 줄이기 위해 분산 서버 관리 기술 이용
+
+### 주키퍼 Zookeeper
+- 분산 환경에서 서버 간의 상호 조정이 필요한 다양한 서비스를 제공하는 시스템
+- 역할
+  - 하나의 서버에만 서비스가 집중되지 않게 서비스를 알맞게 분산해 동시에 처리하게 해줌
+  - 하나의 서버에서 처리한 결과를 다른 서버와도 동기화해서 데이터의 안정성 보장
+  - 운영 서버에 문제가 발생해서 서비스를 제공할 수 없는 경우, 다른 대기 중인 서버를 운영 서버로 바꿔서 서비스가 중지 없이 제공되게 함
+  - 분산 환경을 구성하는 서버의 환경설정을 통합적으로 관리
+
+### 시각화
+### 휴 Hue
+- 하둡과 하둡에코시스템의 지원을 위한 웹 인터페이스를 제공하는 오픈 소스
+- Hive 쿼릴르 실행하는 인터페이스 제공
+- 잡의 스케줄링, 잡, HDFS 등 모니터링하기 위한 인터페이스도 제공
