--- a/빅데이터 - 하둡, 하이브로 시작하기.md
+++ b/빅데이터 - 하둡, 하이브로 시작하기.md
@@ -109,3 +109,35 @@
 - 하둡과 하둡에코시스템의 지원을 위한 웹 인터페이스를 제공하는 오픈 소스
 - Hive 쿼릴르 실행하는 인터페이스 제공
 - 잡의 스케줄링, 잡, HDFS 등 모니터링하기 위한 인터페이스도 제공
+
+### 보안
+### 레인저 Ranger
+- 하둡 클러스터의 각 모듈에 대한 보안 정책을 관리할 수 있음
+- HDFS의 ACL, Hive 데이터베이스의 접근권한 등의 보안 정책과 각 모듈에 대한 접근 기록(Audit)을 보관함
+
+### 데이터 거버넌스
+- 기업의 여기저기 산재한 데이터를 같은 저장소에 관리
+- 비정형 데이터를 규칙에 맞게 표준화하는 전사 차원의 빅데이터 관리 체계
+
+### 아틀라스 Atlas
+- 데이터 거버넌스로 조직이 보안/컴플라이언스 요구사항을 준수할 수 있도록 지원
+- 데이터 자원에 대한 태깅, 다운스크림 데이터셋에 대한 태그전파, 메타 데이터 접그넹 대한 보안 등 다양한 기능을 가지고 있음
+- 메타데이터 변경 알림 기능을 제공
+- Hive, HBase, Kafka의 데이터가 변경되는 것을 알리는 기능 제공
+
+### 아문센 Amundsen
+- 데이터 디스커버리 플랫폼
+- 기업에 존재하는 데이터를 검색하고 추천하는 기능을 가지고 있음
+- 테이블 상세 페이지 지원
+
+### 플룸 Flume
+- 대량의 로그 데이터를 여러 소스에서 수집하여 저장하기 위한 목적으로 개발
+- 데이터 수집 프레임워크
+- 특징
+  - 여러개의 플룸 에이전트를 연결하여 확장 가능
+  - 다양한 연결 모드를 지원하여 최종 목적지에 데이터를 전달할 때 까지 유연한 구성 가능
+  - 전달 받은 데이터를 메모리, File, DB에 임시 저장하여 오류 발생 시 복구 가능 -> 신뢰성 
+- 구조
+  - OG: master가 agent를 관리, 데이터가 집중되면 master의 병목현상 발생
+    - Agent와 Collector의 설정 값을 변경해줄 때, Master도 함꼐 변경해줘야 하는 불편함이 있음 -> NG 개발
+  - NG: MAster와 collector의 개념이 없고 OG의 agent 노드 구성에 해당 
