--- a/빅데이터 - 하둡, 하이브로 시작하기.md
+++ b/빅데이터 - 하둡, 하이브로 시작하기.md
@@ -141,3 +141,26 @@
   - OG: master가 agent를 관리, 데이터가 집중되면 master의 병목현상 발생
     - Agent와 Collector의 설정 값을 변경해줄 때, Master도 함꼐 변경해줘야 하는 불편함이 있음 -> NG 개발
   - NG: MAster와 collector의 개념이 없고 OG의 agent 노드 구성에 해당 
+
+### 카프카 Kafka
+- 분산 스트리밍 플랫폼
+- 메시징, 메트릭 수집, 로그 수집, 스트림 처리 등 다양한 용도로 사용 가능
+- 특징
+  - 빠름
+  - 확장 가능
+  - 안정적
+- 발행/구독 모델
+  - 주제에 맞게 브로커에게 전달하면 구독자가 브로커에 요청해서 가져가는 방식
+  - 발행자는 메시지를 topic으로 카테고리화
+  - 구독자는 topic에 맞는 메시지를 브로커에게 요청
+  - 발행자와 구독자는 서로 알지 못함
+- 발행자 Producer
+  - 메세지를 생산하는 주체
+  - 메세지를 만들고 브로커에게 토픽으로 분류된 메시지를 전달
+    - 메시지는 배치 형태로 전달
+  - 발행자는 구독자의 존재를 알지 못함
+- 구독자 Consumer
+  - 소비자로 메시지를 소비하는 주체
+  - 발행자의 존재를 알지 못함
+  - 원하는 토픽을 구독하여 스스로 조절해가면서 소비할 수 있음
+  - 원하는 토픽의 각 파티션에 존재하는 오프셋의 위치를 기억하고 관리하여 데이터의 중복을 관리
