--- a/빅데이터 - 하둡, 하이브로 시작하기.md
+++ b/빅데이터 - 하둡, 하이브로 시작하기.md
@@ -164,3 +164,15 @@
   - 발행자의 존재를 알지 못함
   - 원하는 토픽을 구독하여 스스로 조절해가면서 소비할 수 있음
   - 원하는 토픽의 각 파티션에 존재하는 오프셋의 위치를 기억하고 관리하여 데이터의 중복을 관리
+
+### 스쿱 Sqoop
+- 관계형 데이터베이스와 하둡 HDFS간에 데이터를 전송할 수 있도록 설계된 오픈소스 소프트웨어
+- 버전
+  - Sqoop 1: 클라이언트 방식, CLI 명령여로 작업 실행
+  - Sqoop 2: 클라이언트 방식+ 서버사이드 방식 추가됨, Sqoop 서버가 존재하고, 사용자가 서버에 요청하여 작업을 실해앟는 방식
+- HDFS와 RDB 간 데이터 전송
+  - 양쪽으로 이동 가능
+  - Hive, Pig, HBase로 이동 가능
+- 동작
+  - import: DB -> HDFS
+  - export: HDFS -> DB
