--- a/빅데이터 - 하둡, 하이브로 시작하기.md
+++ b/빅데이터 - 하둡, 하이브로 시작하기.md
@@ -196,3 +196,31 @@
   - 실시간 데이터 분석 같이 신속하게 처리해야 하는 작업에는 부적합
   - 너무 많은 버전과 부실한 서포트
   - 설정의 어려움
+
+### YARN 아키텍처
+- 작업 처리 단위: 컨테이너
+- 작업에 제출 -> 애플리케이션 마스터 생성 -> 애플리케이션 마스터가 리소스 매니저에 자원 요청 -> 실제 작업을 담당하는 컨테이너를 할당받아 작업 처리
+- 컨테이너는 작업이 요청되면 생성됨 -> 작업이 완료되면 종료되기 때문에 클러스터 효율적 사용 가능
+- MR로 구현된 작업이 아니더라도 컨테이너를 할당받아서 동작할 수 있음 -> Spark, HBase, Storm 등 다양한 컴포넌트들 실행 가능
+
+### HDFS Hadoop Distributed File System
+- 범용 하드웨어에서 동작
+- 장애 복구성을 가지는 분산 파일 시스템 목표
+- 실시간 처리보다는 배치 처리를 위해 설계 -> 빠른 데이터 응답시간이 필요한 작업에는 적합 x
+- 네임 노드가 단일 실패 지점이 되기 때문에 네임노드 관리 중요
+- 특징
+  - 블록 단위 저장
+    - 블록사이즈보다 작은 파일은 기존 파일 사이즈대로 저장
+    - 블록 사이즈보다 크면 블록 단위로 나누어 저장 -> 단일 디스크의 데이터보다 큰 파일도 저장 가능
+  - 블록 복제를 이용한 장애 복구
+    - 장애 복구를 위해 각 블록을 복제하여 저장
+    - 블록의 기본 복제단위는 3 -> 하나의 블록은 3개의 블록으로 복제됨
+    - 같은 랙(Rack)의 서버와 다른 랙의 서버로 복제되어 저장됨
+    - 블록에 문제가 생기면 복제한 다른 블록을 이용해 데이터 복구
+    - 1G 데이터 저장을 위해 데이터가 복제되어 3G 저장공간 필요
+  - 읽기 중심
+    - 데이터를 한 번 쓰면 여러번 읽는 것을 목적으로 함
+    - 파일 수정 지원 x -> 동작 단순화 -> 데이터 읽기 속도 향상
+  - 데이터 지역성
+    - 맵리듀스는 HDFS의 데이터 지역성을 이용해 처리 속도 증가시킴
+    - 처리 알고리즘이 있는 곳에 데이터를 이동시키지 않고, 데이터가 있는 곳에서 알고리즘을 처리 -> 네트워크를 통해 대용량 데이터를 이동시키는 비용을 줄일 수 있음
