--- a/빅데이터 - 하둡, 하이브로 시작하기.md
+++ b/빅데이터 - 하둡, 하이브로 시작하기.md
@@ -224,3 +224,25 @@
   - 데이터 지역성
     - 맵리듀스는 HDFS의 데이터 지역성을 이용해 처리 속도 증가시킴
     - 처리 알고리즘이 있는 곳에 데이터를 이동시키지 않고, 데이터가 있는 곳에서 알고리즘을 처리 -> 네트워크를 통해 대용량 데이터를 이동시키는 비용을 줄일 수 있음
+- 구조
+  - 마스터 슬래이브 구조: 하나의 네임노드와 여러 개의 데이터 노드로 구성
+    - 네임노드: 메타 데이터 가짐
+    - 데이터는 블록 단위로 나누어 데이터 노드에 저장
+    - 사용자는 네임노드를 이용해 데이터를 쓰고 읽을 수 있음
+  - 네임노드: 메타 데이터 관리와 데이터 노드의 관리
+    - 메타 데이터 관리: 각 데이터 노드에서 전달하는 메타 데이터를 받아서 전체 노드의 메타데이터 정보의 파일 정보를 묶어서 관리
+    - 메타 데이터는 사용자가 설정한 위치에 저장됨
+    - 네임노드가 실행될 때 파일을 읽어서 메모리에 보관
+    - 운영 중에 발생한 수정사항은 네임 노드의 메모리에 바로 적용됨
+    - 데이터의 수정사항을 다음 구동시 적용을 위해서 주기적으로 Edits 파일로 저장
+    - 메타데이터 파일 종류
+      - Fsimage 파일: 네임 스페이스와 블록 정보
+      - Edits 파일: 파일의 생성, 삭제에 대한 트랜잭션 로그, 메모리에 저장하다가 주기적으로 생성
+    - 데이터 노드 관리: 네임노드는 데이터노드가 주기적으로 전달하는 하트비트와 블록리포트를 이용하여 데이터 노드의 동작상태, 블록상태 관리
+      - 하트비트: 3초, dfs.heartbeat.interval
+        - 하트비트를 이용하여 데이터 노드가 동작 중이라는 것을 네임노드가 알 수 있음
+        - 하트비트가 도착하지 않으면 네임노드는 데이터노트가 동작하지 않는 것으로 간주 -> 더이상 IO가 발생하지 않도록 조치
+      - 블록리포트: 6시간, dfs.blockreport.intervalMsec
+        - 블록 리포트를 이용하여 HDFS에 저장된 파일에 대한 최신 정보 유지
+        - 블록리포트에는 데이터 노드에 저장된 블록 목록과 각 블록이 로컬디스크의 어디에 저장되어 있는지에 대한 정보를 가짐
+  
