--- a/빅데이터 - 하둡, 하이브로 시작하기.md
+++ b/빅데이터 - 하둡, 하이브로 시작하기.md
@@ -245,4 +245,20 @@
       - 블록리포트: 6시간, dfs.blockreport.intervalMsec
         - 블록 리포트를 이용하여 HDFS에 저장된 파일에 대한 최신 정보 유지
         - 블록리포트에는 데이터 노드에 저장된 블록 목록과 각 블록이 로컬디스크의 어디에 저장되어 있는지에 대한 정보를 가짐
+        - 네임노드의 메타데이터 갱신
+  - 데이터노드: 파일을 저장하는 역할
+    - 파일은 블록단위로 저장됨
+    - 주기적으로 네임노드에게 하트비트와 블록리포트 전달
+    - 블록파일 저장 형태
+      - 블록은 블록과 블록의 메타 정보로 저장됨
+      - blk_12345: 파일블록, 블록 복제 개수에 따라 동일한 이름의 블록이 여러 개의 노드에 생성됨
+      - blk_12345_29082353.meta: 블록의 메타정보
+    - 데이타노드 상태
+      - 활성 상태
+        - 데이터 노드가 Live상태인지, Dead상태인지 나타냄
+        - 데이터노드가 하트비트를 주기적으로 전달하여 살아있는지 확인되면 Live 상태
+        - 데이터노드에 문제가 발생하여 지정한 시간동안 하트비트를 받지 못하면 네임노드는 데이터 노드의 상태를 Stale상태로 변경
+        - 이후 지정한 시간동안 응답이 없으면 Dead 노드로 변경
+      - 운영 상태
+        - 데이터 노드의 업그레이드, 패치 작업을 하기 위해 서비스를 잠시 멈추어야 할 경우 블록을 안전하게 보관하기 위해 설정
   
