--- a/빅데이터 - 하둡, 하이브로 시작하기.md
+++ b/빅데이터 - 하둡, 하이브로 시작하기.md
@@ -261,4 +261,25 @@
         - 이후 지정한 시간동안 응답이 없으면 Dead 노드로 변경
       - 운영 상태
         - 데이터 노드의 업그레이드, 패치 작업을 하기 위해 서비스를 잠시 멈추어야 할 경우 블록을 안전하게 보관하기 위해 설정
-  
+  - 파일 읽기/쓰기
+    - 파일 읽기
+      - 네임 노드에 파일이 보관된 블록 위치 요청
+      - 네임노드가 블록 위치 반환
+      - 각 데이터 노드에 파일 블록 요청
+    - 파일 쓰기
+      - 네임 노드에 파일 정보 전송하고, 파일의 블록에 써야할 노드 목록 요청
+      - 네임노드가 파일을 저장할 목록 반환
+      - 데이터 노드에 파일 쓰기 요청
+- HDFS Federation
+  - 네임노드는 파일 정보 메타데이터를 관리, 파일이 많아지면 메모리 사용량도 늘어남 -> 메모리 관리 문제를 해결하기 위해 하둡v2부터 HDFS 페더레이션 지원
+  - 디렉토리(네임스페이스) 단위로 네임노드를 등록하여 사용하는 것
+  - 파일, 디렉토리의 정보를 가지는 네임스페이스와 블록의 정보를 가지는 블록 풀을 각 네임노드가 독립적으로 관리
+  - 네임스페이스와 블록 풀(두개 합쳐서 네임스페이스 볼륨이라고 함)을 각 네임노드가 독립적으로 관리 -> 하나의 네임노드에 문제가 생겨도 다른 네임노드에 영향 X
+- HDFS 고가용성
+  - HDFS는 단일 실패 지점 -> 문제 발생 시 모든 작업 중지, 파일 읽고 쓸 수 없게 됨
+  - ㄴ 하둡v2에서 이 문제를 해결하기 위해 HDFS 고가용성 제공
+  - 이중화된 두 대의 서버인 액티브 네임노드와 스탠바이 네임노드를 이용하여 지원
+  - 액티브, 스탠바이는 데이터 노드로부터 블록 리포트와 하트비트를 모두 받아서 동일한 메타데이터 유지, 공유 스토리지를 이용하여 에디트파일 공유
+  - 액티브 네임노드는 네임노드의 역할 수행
+  - 스탠바이 네임노드는 액티브와 동일한 메타데이터 정보를 유지하다가 액티브에 문제가 발생하면 스탠바이가 액티브 역할을 함
+  - ㄴ 액티브 네임노드에 문제가 발생한 것을 자동으로 확인하기 어렵기 때문에 보통 주피퍼를 이용하여 장애 발생시 자동으로 변경될 수 있도록 함
