--- a/빅데이터 - 하둡, 하이브로 시작하기.md
+++ b/빅데이터 - 하둡, 하이브로 시작하기.md
@@ -283,3 +283,14 @@
   - 액티브 네임노드는 네임노드의 역할 수행
   - 스탠바이 네임노드는 액티브와 동일한 메타데이터 정보를 유지하다가 액티브에 문제가 발생하면 스탠바이가 액티브 역할을 함
   - ㄴ 액티브 네임노드에 문제가 발생한 것을 자동으로 확인하기 어렵기 때문에 보통 주피퍼를 이용하여 장애 발생시 자동으로 변경될 수 있도록 함
+- HDFS 세이프모드
+  - 데이터노드를 수정할 수 없는 상태
+  - 세이프 모드가 되면 데이터는 읽기 전용 상태가 됨, 데이터 추가와 수정 불가능, 복제도 일어나지 않음
+  - 사용 시기: 관리자가 서버 운영 정비(수동), 네임노드에 문제가 생겨서 정상적인 동작을 할 수 없을 때(자동)
+- 밸런서 balance
+  - 데이터 불균형이 발생하면 실행
+  - 데이터 불균형이 발생하는 경우
+    - 데이터 노들르 추가하는 경우
+    - 대량의 데이터를 삭제하는 경우 -> 데이터 노드간 저장공간 차이가 20~30% 차이나는 경우
+    - 대량의 데이터를 추가하는 경우 -> 특정 데이터 노드에 데이터가 적은 경우, 네임노드는 데이터 저장공간이 작은 노드를 우선적으로 사용하는데 이 경우 특정 노드로 I/O가 집중됨
+  - 밸런서는 작업간 많은 데이터 이동이 발생하기 때문에 대역폭을 지정하여 다른 작업에 영향이 가지 않도록 권장
