--- a/빅데이터 - 하둡, 하이브로 시작하기.md
+++ b/빅데이터 - 하둡, 하이브로 시작하기.md
@@ -294,3 +294,21 @@
     - 대량의 데이터를 삭제하는 경우 -> 데이터 노드간 저장공간 차이가 20~30% 차이나는 경우
     - 대량의 데이터를 추가하는 경우 -> 특정 데이터 노드에 데이터가 적은 경우, 네임노드는 데이터 저장공간이 작은 노드를 우선적으로 사용하는데 이 경우 특정 노드로 I/O가 집중됨
   - 밸런서는 작업간 많은 데이터 이동이 발생하기 때문에 대역폭을 지정하여 다른 작업에 영향이 가지 않도록 권장
+
+### 맵리듀스 Mapreduce
+- 간단한 단위 작업을 반복하여 처리할 때 사용하는 프로그래밍 모델 -> 하둡에서 분산처리 담당
+- Map: 간단한 단위 작업을 처리
+- Reduce: 맵 작업의 결과물을 모아서 집계
+- 맵, 리듀스 작업은 병렬로 처리 가능한 직업으로 여러 컴퓨터에서 동시에 작업을 처리하여 속도를 높일 수 있음
+- 작업단위: 잡(하둡v1) = 애플리케이션(하둡v2)
+  - YARN 아키텍처가 도입되면서 이름은 변경되었지만 동일하게 관리됨
+  - 잡은 맵 태스크와 리듀스 태스크로 나누어짐 -> 태스크는 attempt 단위로 실행됨
+- 작업 종류
+  - 리듀서 작업이 있는 경우
+    - 리듀서가 하나인 경우: 정렬 -> 리듀서 하나로 모든 작업을 처리해서 시간이 오래 걸림
+    - 리듀서가 여러 개인 경우: 집계 -> 리듀서의 수 만큼 파일이 생성됨, HDFS의 부하를 방지하기 위해 추가적인 파일 머지 작업이 필요할 수도 있음 
+  - 리듀서 작업이 없는 경우 = 매퍼만 있는 작업: 파일을 읽어서 바로 쓰는 작업(리듀스 필요 없음)
+    - 원천 데이터를 읽어서 가공하고 바로 쓴느 경우
+    - 리듀서 작업이 없기 때문에 빠름
+    - 매퍼의 수만큼 파일이 생성되기 때문에 추가적인 파일 머지 작업이 필요할 수 있음
+    
