--- a/빅데이터 - 하둡, 하이브로 시작하기.md
+++ b/빅데이터 - 하둡, 하이브로 시작하기.md
@@ -311,4 +311,24 @@
     - 원천 데이터를 읽어서 가공하고 바로 쓴느 경우
     - 리듀서 작업이 없기 때문에 빠름
     - 매퍼의 수만큼 파일이 생성되기 때문에 추가적인 파일 머지 작업이 필요할 수 있음
+- 처리 단계
+  1. 입력: 텍스트, csv, gzip 형태의 데이터를 읽어서 맵으로 전달
+  2. 맵 Map: 입력을 분할하여 키별로 데이터를 처리
+  3. 컴바이너 Combiner(로컬 리듀서): 네트워크를 타고 넘어가는 데이터르 줄이기 위해 맵의 결과 정리
+  4. 파티셔너 Partitioner: 맵의 출력 결과 키 값을 해쉬 처리하여 어떤 리듀서로 넘길지 결정
+  5. 셔플 Shuffle: 각 리듀서로 데이터 이동
+  6. 정렬 Sort: 리듀서로 전달된 데이터를 키 값 기준으로 정렬
+  7. 리듀서 Reduce: 리듀서로 데이터를 처리하고 결과를 저장
+  8. 출력: 리듀서의 결과를 정의된 형태로 저장
+
+### YARN
+- 하둡2에서 도입한 클러스터 리소스 관리 및 애플리케이션 라이프 사이클 관리를 위한 아키텍처
+- 구성
+  - 자원 관리
+    - 리소스 매니저: 노드매니저로부터 전달받은 정보를 이용하여 클러스터 전체의 자원 관리, 자원 사용 상태 모니터링, 애플리케이션 마스터에서 자원 요청 시 비어 있는 자원 사용할 수 있도록 처리
+    - 노드매니저: 클러스터의 각 노드마다 실행됨, 현재 노드의 자원상태를 관리하고 리소스매니저에 현재 자원상태 보고
+    - 스케줄러: 자원을 분배하는 규칙을 설정하는 것
+  - 애플리케이션 라이프 사이클 관리
+    - 애플리케이션 마스터: 작업 실해을 위한 자원을 리소스 매니저에 요청, 자원을 할당받아서 각 노드에 컨테이너 실행, 실제 작업 진행
+    - 컨테이너: 실제 작업이 실행되는 단위, 작업이 종료되면 결과를 애플리케이션 마스터에게 알림
     
