--- a/빅데이터 - 하둡, 하이브로 시작하기.md
+++ b/빅데이터 - 하둡, 하이브로 시작하기.md
@@ -327,8 +327,22 @@
   - 자원 관리
     - 리소스 매니저: 노드매니저로부터 전달받은 정보를 이용하여 클러스터 전체의 자원 관리, 자원 사용 상태 모니터링, 애플리케이션 마스터에서 자원 요청 시 비어 있는 자원 사용할 수 있도록 처리
     - 노드매니저: 클러스터의 각 노드마다 실행됨, 현재 노드의 자원상태를 관리하고 리소스매니저에 현재 자원상태 보고
-    - 스케줄러: 자원을 분배하는 규칙을 설정하는 것
   - 애플리케이션 라이프 사이클 관리
     - 애플리케이션 마스터: 작업 실해을 위한 자원을 리소스 매니저에 요청, 자원을 할당받아서 각 노드에 컨테이너 실행, 실제 작업 진행
     - 컨테이너: 실제 작업이 실행되는 단위, 작업이 종료되면 결과를 애플리케이션 마스터에게 알림
-    
+- 스케줄러: 자원을 분배하는 규칙을 설정하는 것
+  - FIFO 스케줄러
+    - 먼저 들어온 작업이 먼저 처리, 먼저 들어온 작업이 종료될 때까지 다음작업은 대기
+    - 자원 효율적 사용 X -> 테스트 목적으로만 사용하는 것이 좋음
+  - Fair 스케줄러
+    - 제출된 작업이 동등하게 리소스를 점유
+    - 작업 큐에 작업이 제출되면 클러스터는 자원을 조절하여 작업에 균등하게 자원 할당
+    - 메모리와 CPU를 기반으로 자원 설정 가능
+  - Capacity 스케줄러
+    - 하둡v2의 기본 스케줄러
+    - 트리 형태로 계층화된 큐 선언
+    - 큐별로 사용가능한 용량을 할당하여 자원 관리
+    - 만약 클러스터 자원에 여유가 있다면, 설정을 이용하여 각 큐에 설정된 용량 이상의 자원을 이용하게 할 수도 있고, 운영 중에도 큐를 추가할 수 있는 유연성도 있음
+- HA 기능
+  - YARN은 리소스 매니저가 단일 실패 지점 -> 리소스 매니저에 문제가 발생하면 클러스터의 자원관리, 작업관리 기능을 사용할 수 없기 때문에 하둡 2.4버전부터 HA기능 제공
+  - 리소스 매니저 고가용성은 주키퍼와 액티브, 스탠바이 리소스 매니저를 이용하여 제공
