--- a/빅데이터 - 하둡, 하이브로 시작하기.md
+++ b/빅데이터 - 하둡, 하이브로 시작하기.md
@@ -346,3 +346,18 @@
 - HA 기능
   - YARN은 리소스 매니저가 단일 실패 지점 -> 리소스 매니저에 문제가 발생하면 클러스터의 자원관리, 작업관리 기능을 사용할 수 없기 때문에 하둡 2.4버전부터 HA기능 제공
   - 리소스 매니저 고가용성은 주키퍼와 액티브, 스탠바이 리소스 매니저를 이용하여 제공
+
+### 하이브 Hive
+- 하둡 에코시스템 중에서 데이터를 모델링하고 프로세싱하는 경우 가장 많이 사용하는 데이터 웨어하우징용 솔루션
+- RDB의 데이터베이스, 테이블과 같은 형태로 HDFS에 저장된 데이터의 구조를 정의하는 방법 제공
+- 이 데이터를 대상으로 SQL과 유사한 HiveQL 쿼리를 이용하여 데이터를 조회하는 방법 제공
+- 구성 요소
+  - UI: 사용자가 쿼리 및 기타 작업을 시스템에 제출하는 사용자 인터페이스 ex. CLI, Beeline, JDBC 등
+  - Driver: 쿼리를 입력받고 작업을 처리, 사용자 세션을 구현하고 JDBC/ODBC 인터페이스 API 제공
+  - Compiler: 메타 스토어를 참고하여 쿼리 구문을 분석하고 실행계획을 생성
+  - Metastore: 디비, 테이블, 파티션의 정보를 저장
+  - Execution Engine: 컴파일러에 의해 생성된 실행 계획을 실행
+- 데이터베이스
+  - 테이블의 이름을 구별하기 위한 네임 스페이스 역할
+  - 테이블의 데이터의 기본 저장 위치를 제공
+  - 
