--- a/빅데이터 - 하둡, 하이브로 시작하기.md
+++ b/빅데이터 - 하둡, 하이브로 시작하기.md
@@ -360,4 +360,24 @@
 - 데이터베이스
   - 테이블의 이름을 구별하기 위한 네임 스페이스 역할
   - 테이블의 데이터의 기본 저장 위치를 제공
-  - 
+- 함수
+  - UDF: 1개의 열을 처리하여 1개의 열을 반환하는 함수
+  - UDAF: N개의 열을 이용하여, 1개의 열을 반환
+  - UDTF: 1개의 열을 입력받아 N개의 열을 반환
+  - 사용자 정의 함수
+    - 하이브에서 제공하는 기본 함수 구현을 상속하여 Java로 구현
+    - UDF, UDAF, UDTF를 각각 구현할 수 있음
+    - 파이썬 스크립트를 이용하여 UDTF를 구현할 수도 있음
+- 트랜잭션
+  - 파일 수정/변경이 없는 HDFS 특성상 모든 기능이 완벽하게 지원되지 않고 다음의 기능만 제공
+    - BEGIN, COMMIT, ROLLBACK은 아직 지원하지 않음, 현재는 auto-commit 만 지원 
+    - ORC 파일 포맷, 버켓팅 설정이 된 매니지드 테이블에서만 지원 
+    - Non-ACID 세션에서는 ACID 테이블에 접근 불가
+  - 기본 트랜잭션 설정은 off
+  - 처리 순서
+    - HDFS는 트랜잭션을 지원하기 위해서 데이터를 베이스 파일에 기록
+    - 트랜잭션(생성/수정/삭제)이 발생할때마다 델타delta 파일에 내용 기록
+    - 파일을 읽을 때 베이스 파일에 델타 파일의 내용을 적용하여 수정된 내용을 반환
+    1. 테이블이나 파티션은 베이스 파일의 집합으로 저장 
+    2. insert, update, delete 에 대해서는 델타 파일로 저장 
+    3. 읽는 시점에 베이스 파일과, 델터 파일을 합쳐서 수정된 내용을 반환
