--- a/빅데이터 - 하둡, 하이브로 시작하기.md
+++ b/빅데이터 - 하둡, 하이브로 시작하기.md
@@ -369,6 +369,7 @@
     - UDF, UDAF, UDTF를 각각 구현할 수 있음
     - 파이썬 스크립트를 이용하여 UDTF를 구현할 수도 있음
 - 트랜잭션
+  - 작업의 논리적인 단위, 동시성 지원
   - 파일 수정/변경이 없는 HDFS 특성상 모든 기능이 완벽하게 지원되지 않고 다음의 기능만 제공
     - BEGIN, COMMIT, ROLLBACK은 아직 지원하지 않음, 현재는 auto-commit 만 지원 
     - ORC 파일 포맷, 버켓팅 설정이 된 매니지드 테이블에서만 지원 
@@ -381,3 +382,17 @@
     1. 테이블이나 파티션은 베이스 파일의 집합으로 저장 
     2. insert, update, delete 에 대해서는 델타 파일로 저장 
     3. 읽는 시점에 베이스 파일과, 델터 파일을 합쳐서 수정된 내용을 반환
+  - 락 Lock
+    - 동시성 지원, 트랜잭션을 처리할 때 테이블, 파티션에 접근을 제어하는 용도로 사용
+    - 종류
+      - 공유 잠금(S, Shared) = 읽기 잠금(Read Lock): 다른 트랜잭션에서 데이터를 읽으려고 할 때 다른 공유 잠금은 허용되지만, 배타적 감금은 허용되지 않음
+      - 배타적 잠금(X, Exclusive) = 쓰기 잠금(Write Lock): 데이터를 변경하려고 할때 다른 트랜잭션에서 데이터를 읽거나 변경하지 못학 배타적 잠금을 설정, 배타적 잠금이 걸리면 공유잠금, 배타적 잠금을 설정할 수 없음
+    - 락의 획득
+      - 락은 논파티션 테이블과 파티션 테이블에서 따로 동작
+      - 논파티션 테이블은 직관적으로 동작
+        - 테이블을 읽을 때는 S 잠금 획득
+        - 다른 작업에서는 X잠금 획득
+      - 파티션 테이블
+        - 읽을 때 테이블에 S 잠금
+        - 파티션에 S 잠금 획득
+        - 다른 작업에서는 테이블에 S잠금, 파티션에 X잠금 획득
