--- a/빅데이터 - 하둡, 하이브로 시작하기.md
+++ b/빅데이터 - 하둡, 하이브로 시작하기.md
@@ -396,3 +396,29 @@
         - 읽을 때 테이블에 S 잠금
         - 파티션에 S 잠금 획득
         - 다른 작업에서는 테이블에 S잠금, 파티션에 X잠금 획득
+- 성능 최적화
+  - 작업엔진 선택: TEZ 엔진 사용
+    - 맵리듀스(MR) 엔진은 연산의 중간 파일을 로컬 디스크에 쓰면서 진행하여 이로인한 잦은 IO처리로 작업이 느려짐
+    - 테즈(TEZ)엔진은 작업 처리결과를 메모리에 저장하여 맵리듀스보다 빠른 속도로 작업을 처리할 수 있음
+  - 파일 저장 포맷: ORC 파일 사용
+    - 테이블의 데이터 저장에 ORC 파일을 사용하여 처리속도를 높일 수 있음
+    - ORC 파일 포맷은 데이터를 컬럼 단위로 저장하기 때문에 거맥 속도가 빠르고 압축률이 높음
+  - 데이터 처리방식: 벡터화(Vectorization) 사용
+    - 벡터화 처리는 한번에 1행을 처리하지 않고, 한 번에 1024행을 처리하여 속도를 높이는 기술
+    - ORC 파일 포맷에서만 사용 가능
+    - 필터링, 조인, 집합 연산에서 40~50% 정도의 성능 향상 기대할 수 있음
+  - 데이터 저장 효율화: 파티셔닝, 버케팅 사용
+    - 하이브는 디렉토리 단위로 데이터를 처리하기 때문에 검색에 사용되는 데이터를 줄이기 위한 방안으로 파티셔닝, 버케팅 기능을 사용하면 좋음
+    - 파티셔닝: 데이터를 폴더 단위로 구분하여 저장하고
+    - 버케팅: 지정한 개수의 파일에 컬럼의 해쉬 값을 기준으로 데이터를 저장
+    - 파티셔닝, 버케팅을 이용하여 한 번에 읽을 데이터의 크기를 줄일 수 있음
+  - 통계정보 이용: 하이브 stat 사용
+    - 하이브는 테이블, 파티션의 정보를 메타스토어에 저장하고 조회나 count, sum 같은 집계함수를 처리할 때 이 정보를 이용할 수 있음
+    - 맵리듀스 연산 없이 바로 작업할 수 있기 때문에 작업의 속도가 빨라짐
+  - 옵티마이저 사용: CBO
+    - 하이브는 카탈리스트 옵티마이저를 이용하여 효율적으로 작업을 처리할 수 있음
+    - explain을 이용하여 작업 분석 상태를 확인할 수 있음
+  - YARN: 작업 큐 설정
+    - YARN의 스케줄러 설정을 통해 작업의 효율성을 높일 수 있음
+    - 작업의 성격에 따라 큐를 여러 개 만들어서 스케줄러의 사용 설정을 적용하면 좋음
+    - 하나의 큐에 모든 작업을 넣지 않고, batch, adhoc 같은 형태로 큐를 만들어서 큐의 최대 사용량 설정을 통해 적절하게 작업을 분산하여 주는 것이 좋음
