--- a/빅데이터 - 하둡, 하이브로 시작하기.md
+++ b/빅데이터 - 하둡, 하이브로 시작하기.md
@@ -422,3 +422,22 @@
     - YARN의 스케줄러 설정을 통해 작업의 효율성을 높일 수 있음
     - 작업의 성격에 따라 큐를 여러 개 만들어서 스케줄러의 사용 설정을 적용하면 좋음
     - 하나의 큐에 모든 작업을 넣지 않고, batch, adhoc 같은 형태로 큐를 만들어서 큐의 최대 사용량 설정을 통해 적절하게 작업을 분산하여 주는 것이 좋음
+  - TEZ
+    - YARN 기반의 비동기 사이클 프레임워크
+    - 하이브에서 맵리듀스 대신 실행 엔진으로 사용할 수 있음
+      - 맵리듀스: 맵 단계에서 데이터를 읽어서 처리하고, 리듀스 단계에서 처리 결과를 저장
+      - 하나의 작업이 여러 단계의 맵, 리듀스를 거치게 되면 중간 작업 결과를 HDFS에 쓰고, 다시 맵단계에서 파일을 읽어서 처리하게 됨
+      - 작업 중간 임시 데이터도 디스크에 쓰게되어 IO작업으로 인한 오버헤드가 많음
+    - 테즈는 맵 단계 처리 결과를 메모리에 저장하고, 이를 리듀스 단계로 바로 전달
+    - 리듀스 작업의 겨과를 맵 단계를 거치지 않고 리듀스 단계로 전달하여 IO 오버헤드를 줄여서 속도를 높일 수 있음
+  - ORC(Optimized Row Columnar)
+    - 칼럼 기반의 파일 저장 방식으로, Hadoop, Hive, Pig, Spark 등에 적용 가능
+    - 데이터베이스의 데이터를 읽을 때 보통 칼럼 단위의 데이터를 이용하는 경우가 많음
+    - ORC는 칼럼 단위로 데이터를 저장하기 때문에 칼럼의 데이터를 찾는 것이 빠르고, 압축효율이 좋음
+  - CBO
+    - 하이브 0.14버전부터 사용자의 쿼리를 최적화하는 CBO 지원
+    - CBO가 적용되면 사용자의 쿼릴르 분석해서 쿼리를 최적화 함
+  - 압축
+    - gzip, snappy: 하둡, 하이브를 이용하여 작업을 처리할 때 저장장치를 효율적으로 이용하기 위해서 데이터 파일을 압축할 때 사용하는 압축 알고리즘 
+    - gzip: GNU zip의 약자, 유닉스에서 사용되는 압축 방식의 한 종류, DEFLATE 알고리즘 이용, 합축률이 높지만 CPU사용률이 높음
+    - snappy: 구글에서 개발한 압축 알고리즘, 적당한 수준의 압축률에 빠른 압축/해제 속도 제공
