--- a/데이터아키텍처 전문가 가이드.md
+++ b/데이터아키텍처 전문가 가이드.md
@@ -19,4 +19,24 @@
    2. 전사 개념
       - 일반적으로 기업 또는 기관을 지칭
       - 공동의 목표를 추구하기 위해 고객과 상품 또는 서비스가 존재하고 이를 지원하기 위한 조직, 자원, 기술을 보유하며, 필요한 업무 프로세스를 수행하는 조직의 집합체
-3. 아키텍처 도메인 구성 
+   3. 아키텍처 도메인 구성
+      - 아키텍처 도메인: 아키텍처 정보의 영역을 구분한 것
+      - 비즈니스 아키텍처
+        - 기업이나 조직의 경영 목표를 달성하기 위한 업무 구조를 정의한 아키텍처 영역
+        - 타 아키텍처의 방향을 정의하고 검증하는 시발점
+      - 애플리케이션 아키텍처
+        - 기업의 업무를 지원하는 전체 애플케이션을 식별하고 연관성을 정의하며, 업무와 IT 특성을 고려하여 그룹화하고 범주화함으로써 전체 애플리케이션 구조를 체계화하는 것
+      - 데이터 아키텍처
+        - 기업의 업무 수행에 필요한 데이터의 구조를 체계적으로 정의하는 것
+      - 기술 아키텍처
+        - 비즈니스, 데이터, 애플리케이션 아키텍처에서 정의된 요건을 지원하는 전사의 기술 인프라 체계를 정의하는 것
+
+3. 데이터아키텍처 개요
+   1. 데이터아키텍처 개념
+      - 기업이나 조직의 업무 수행에 필요한 데이터의 구조를 체계적으로 정의하여 구축하고 관리하기 위한 방법
+      - 전사아키텍처를 구성하는 아키텍처 도메인중에서도 데이터아키텍처는 다른 아키텍처 도메인에 비해 독립적으로 구축할 수 있는 특징을 가짐 -> 전사아키텍처가 구축되어 있지 않더라도 개별적으로 데이터아키텍처를 구축하여 운영할 수 있음
+      - 전사의 영역을 분류
+        - 업무데이터
+          - 운영계 데이터
+          - 정보계데이터
+        - 메타데이터 
