--- a/데이터아키텍처 전문가 가이드.md
+++ b/데이터아키텍처 전문가 가이드.md
@@ -40,3 +40,21 @@
           - 운영계 데이터
           - 정보계데이터
         - 메타데이터 
+
+#### 제2절 아키텍처 프레임워크
+1. 아키텍처 프레임워크 개요
+    - 프레임워크: 뼈대에 해당하는 기본 구조
+2. 전사아키텍처 프레임워크 구성
+   1. 전사 아키텍처 정책
+      - 아키텍처 매트릭스: 전사아키텍처의 정보를 체계적으로 분류한 틀, 기업이나 조직이 관리하려고 하는 전사아키텍처 정보의 수준과 활용 계층을 결정하는 수단
+      - 전사아키텍처 비전: 전사아키텍처 수립을 통하여 기업이나 조직이 궁극적으로 달성하고자하는 모습
+      - 전사이키텍처 원칙: 전사아키텍처 정보를 효율적으로 구축하고, 기억이나 조직의 목적에 맞게 전사아키텍처 정보를 효과적으로 활용하기 위해서 조직 구성원이 공유해야 할 규범을 말함
+   
+#### 제3절 데이터아키텍처 참조모델
+1. 참조모델의 정의
+   1. 참조모델 개념: 다양한 관점을 충족시킬 수 있도록 시스템에 대한 개념적인 모델을 추상화하고, 구성 요소를 재사용 가능한 방식으로 생성하여, 여러 기업이나 조직이 사용할 수 있도록 한 것
+   2. 참조모델 구축 방법
+      - 공통적인 특성을 추출하여 그 산업군에 맞게 범용적으로 만드는 것
+      - 대표적인 기업을 선정하여 그 기업의 아키텍처를 표본으로 삼아 비슷한 타 기업에 재활용할 수 있도록 만드는 것
+2. 데이터 참조모델
+   - 데이터 참조모델: 데이터아키텍처 구축 시 참조 및 재사용할 수 있도록 업무 수행에 필요한 데이터를 유형별로 분류하여 표준화하고 업무와 서비스 컴포넌트를 지원하는 데이터의 분류와 의미, 주요 데이터 요소, 관리체계 등을 정의한 것
