--- a/데이터아키텍처 전문가 가이드.md
+++ b/데이터아키텍처 전문가 가이드.md
@@ -58,3 +58,21 @@
       - 대표적인 기업을 선정하여 그 기업의 아키텍처를 표본으로 삼아 비슷한 타 기업에 재활용할 수 있도록 만드는 것
 2. 데이터 참조모델
    - 데이터 참조모델: 데이터아키텍처 구축 시 참조 및 재사용할 수 있도록 업무 수행에 필요한 데이터를 유형별로 분류하여 표준화하고 업무와 서비스 컴포넌트를 지원하는 데이터의 분류와 의미, 주요 데이터 요소, 관리체계 등을 정의한 것
+   - 관리 기준: 범용성, 단순성, 표준성, 정확성, 정보 이용성, 분류성
+
+#### 제4절 데이터 아키텍처 프로세스
+1. 데이터 아키텍처 프로세스 개요
+   1. 프로세스의 중요성
+        - 프로세스: 일반적으로 일을 처리하는 과정 또는 순서, 업무 활동, 실제로 업무가 수행되는 행위를 의미
+        - 프로세스를 정의하는 것 = 활동의 내용과 그 책임 소재를 규명하는 것
+   2. EA 프로세스 및 DA 프로세스 개념과 차이점
+        - 전사 아키텍처 프로세스: 전사 아키텍처를 구축하고 관리하는 전체 절차에 관한 것으로, 작업의 단계와 공정, 작업 내용 등을 정의하는 것
+        - 데이터아키텍처 프로세스: 전사아키텍처 프로세스와 유사하게 데이터아키텍처를 구축하고 관리하는 전체 절차에 대해 작업의 단계와 공정, 작업 내용 등을 정의한 것 -> 전사아키텍처를 구성하는 아키텍쳐 도메인 중 데이터에 집중하여 상세 프로세스를 정의한 것
+2. 데이터아키텍처 프로세스 구성
+   - 데이터아키텍처 프로세스: 데이터아키텍처 정책 수립 -> 데이터아키텍처 정보 구축 -> 데이터아키텍처 관리체계 수립 -> 데이터아키텍처 활용 단계
+
+#### 제5절 데이터아키텍트
+1. 아키텍트의 개념
+    - 아키텍트: 아키텍처를 설계하고 유지,관리하는 사람
+      - 비즈니스 언어를 기술 언어로 표현하여 정보기술 또는 정보시스템의 방향 혹은 청사진을 제시
+      - 아키텍트는 기업이나 조직의 목표를 이해하고, 그 목표를 달성하기 위한 방향과 전략을 도출하여 아키텍처를 수립하는 데 있어 이상에 치우치지 않고 기업이나 조직의 역량과 수준에 맞도록 해야 함
