--- a/데이터아키텍처 전문가 가이드.md
+++ b/데이터아키텍처 전문가 가이드.md
@@ -76,3 +76,25 @@
     - 아키텍트: 아키텍처를 설계하고 유지,관리하는 사람
       - 비즈니스 언어를 기술 언어로 표현하여 정보기술 또는 정보시스템의 방향 혹은 청사진을 제시
       - 아키텍트는 기업이나 조직의 목표를 이해하고, 그 목표를 달성하기 위한 방향과 전략을 도출하여 아키텍처를 수립하는 데 있어 이상에 치우치지 않고 기업이나 조직의 역량과 수준에 맞도록 해야 함
+2. 데이터아키텍트의 위상과 역할
+   - 데이터 아키텍트: 전사 데이터 구조와 데이터 관리 체계를 위한 아키텍처를 설계하는 전문가 -> 데이터를 기반으로 한 데이터 관련 정책,표준화, 데이터 구조 설계 및 이행 등을 담당
+
+### 제2장: 데이터아키텍처 구축
+#### 제1절 데이터아키텍처 방향 수립
+1. 데이터아키텍처 방향 수립 개요
+   - 데이터아키텍터 방향 수립: 데이터아키텍처 환경 분석, 데이터아키텍처 구축 방향 정의, 데이터아키텍처 프레임워크 정의
+2. 데이터아키텍터 환경 분석
+   - 비즈니스 내외부 환경 분석
+   - 데이터 관련 내외부 환경 분석
+   - 전사 범위 정의
+3. 데이터아키텍처 구축 방향 정의
+   - 데이터아키텍처의 일반적 목적과 데이터아키텍처 환경 분석 결과를 기반으로 기업이나 조직의 데이터아키텍처 구축 목적, 기업이나 조직의 데이터 아키텍처에 대한 이해와 관리 역량을 고려하여 구축 범위를 지정하는 것
+
+#### 제2절 데이터아키텍처 정보 구성 정의
+1. 데이터아키텍처 정보 구성 개요
+   - 아키텍처 매트릭스: 데이터아키텍처 정보를 표현하기 위해서 데이터 아키텍처 산출물과 이를 구성하는 요소를 분류하는 것이 필요한데, 매트릭스 형태로 작성한 것
+2. 데이터아키텍처 매트릭스 정의
+   1. 데이터아키텍처 매트릭스 개념
+      - 데이터아키텍처 프레임워크의 핵심 구성 요소
+      - 전사적 데이터를 설명하는 모델과 원칙 정보를 통일된 시각으로 볼 수 있는 논리적 틀
+      - 협의의 프레임워크로 데이터 아키텍처 도메인과 산출물을 식별하고 정의하기 위한 논리적 체계를 정의하는 것 
