--- a/데이터아키텍처 전문가 가이드.md
+++ b/데이터아키텍처 전문가 가이드.md
@@ -97,4 +97,24 @@
    1. 데이터아키텍처 매트릭스 개념
       - 데이터아키텍처 프레임워크의 핵심 구성 요소
       - 전사적 데이터를 설명하는 모델과 원칙 정보를 통일된 시각으로 볼 수 있는 논리적 틀
-      - 협의의 프레임워크로 데이터 아키텍처 도메인과 산출물을 식별하고 정의하기 위한 논리적 체계를 정의하는 것 
+      - 협의의 프레임워크로 데이터 아키텍처 도메인과 산출물을 식별하고 정의하기 위한 논리적 체계를 정의하는 것
+3. 데이터아키텍처 원칙 수립
+   - 데이터아키텍처 비전 달성을 위해 구성원들이 공통적으로 지켜야 하는 규범을 정의하는 것
+   - 데이터아키텍처 원칙 구성 요소
+     - 원칙: 원칙의 내용을 간략하게 기술
+     - 의미: 원칙이 가지는 의미를 설명
+     - 근거: 원칙으로 채택된 원인 또는 배경
+     - 기대효과: 원칙이 데이터아키텍처 수립에 미치는 영향 또는 준수 시의 기대 효과
+
+#### 제3절 데이터아키텍처 구축 프로세스
+   - 기존에 작성된 자료 수집
+   - 현행 데이터아키텍처 정보의 구축은 현재의 업무나 정보시스템에 관련된 데이터에 대하여 기존의 자료를 분석하여 데이터아키텍처 정보를 구축하는 것을 말함
+   - 목표 데이터아키텍처 정보의 구축은 현행 데이터아키텍처에 대한 문제점과 개선 사항을 도출하고, 데이터 요구 사항 및 데이터 참조모델을 참조하여 이를 목표 아키텍처에 반영하는 방식
+
+### 제3장: 데이터 거버넌스
+#### 제1절 데이터 거버넌스 개요
+   - 기업이나 조직의 목적에 적합하면서 높은 품질의 데이터를 사용할 수 있도록 하기 위한 바람직한 활동 체계를 정의하는 것
+   - 정략, 정책 및 운영 요소를 결합하는 역락
+   - 데이터아키텍처 도입 시 중요한 것은 정보를 관리하고 활용할 수 있는 체계를 정립하는 것 -> 데이터 거버넌스의 핵심 요소로, 데이터아키텍처를 유지,관리하는 조직과 프로세스 측면의 기반을 구축하는 것을 포함
+   - 데이터 거버넌스의 요체는 데이터를 통제되지 않은 상태에서 통제된 상태로 전환하는 것
+   - 통제된 상태의 데이터 = 거버넌스 데이터는 신뢰할 수 있고, 이해가 쉬우며, 데이터 자체와 데이터에 대한 문제를 해결할 책임이 명확하게 확립되어 있는 데이터
