--- a/데이터아키텍처 전문가 가이드.md
+++ b/데이터아키텍처 전문가 가이드.md
@@ -118,3 +118,11 @@
    - 데이터아키텍처 도입 시 중요한 것은 정보를 관리하고 활용할 수 있는 체계를 정립하는 것 -> 데이터 거버넌스의 핵심 요소로, 데이터아키텍처를 유지,관리하는 조직과 프로세스 측면의 기반을 구축하는 것을 포함
    - 데이터 거버넌스의 요체는 데이터를 통제되지 않은 상태에서 통제된 상태로 전환하는 것
    - 통제된 상태의 데이터 = 거버넌스 데이터는 신뢰할 수 있고, 이해가 쉬우며, 데이터 자체와 데이터에 대한 문제를 해결할 책임이 명확하게 확립되어 있는 데이터
+
+#### 제2절 데이터 거버넌스 구성
+   - 데이터 거버넌스는 조직, 프로세스, 인력, 관리 시스템의 관점에서 검토되고 수립됨
+   - 데이터 아키텍처 관리 시스템: 데이터아키텍처 정보를 구축,관리, 활용하는 모든 업무 프로세스를 효과적으로 지원하기 위한 시스템으로, 일반적으로 메타 데이터 관리 시스템으로 알려져 있음
+
+#### 제3절 데이터 거버넌스 운영
+   - 데이터 거버넌스 운영 및 통제 활용은 데이터아키텍처의 현행 데이터아키텍처 정보를 바탕으로 시스템을 운영하고 데이터의 현재 상태를 빠르고 정확하게 파악할 수 있도록 함
+   - 데이터 거버넌스는 조직, 프로세스, 관리 시스템이 조화될 때 비로소 효과를 발휘할 수 있음
