--- a/데이터아키텍처 전문가 가이드.md
+++ b/데이터아키텍처 전문가 가이드.md
@@ -126,3 +126,15 @@
 #### 제3절 데이터 거버넌스 운영
    - 데이터 거버넌스 운영 및 통제 활용은 데이터아키텍처의 현행 데이터아키텍처 정보를 바탕으로 시스템을 운영하고 데이터의 현재 상태를 빠르고 정확하게 파악할 수 있도록 함
    - 데이터 거버넌스는 조직, 프로세스, 관리 시스템이 조화될 때 비로소 효과를 발휘할 수 있음
+
+## 2과목: 데이터 요건 분석
+### 제1장 정보 요구 사항 개요
+#### 제1절 정보 요구 사항
+1. 정의
+   - 정보 요구 사항: 사용자가 일상적으로 수행하는 업무의 개선 사항이나 신규 개발 사항으로 시스템을 통해 기능상의 목적을 달성하기 위해 요청하는 내용
+2. 정보 요구 사항 생명주기 모형
+   - 베이스라인을 중심으로 요구 사항 개발과 요구 사항관리로 나누어짐
+   - 정보 요구 사항 개발 단계: 정보요구사항 도출, 정보요구사항 분석/정의, 명세화, 검증
+   - 요구사항 관리 단계: 승인 이후 요구 사항 변경 요청에 대한 영향 부넉과 요구 사항을 반복적으로 수행하여 사용자 정보 요구 사항이 정보시스템에 누락 없이 반영되어야 함
+3. 정보 요구 사항 유형
+   - 기능/비기능/기타 요구 사항
