--- a/데이터아키텍처 전문가 가이드.md
+++ b/데이터아키텍처 전문가 가이드.md
@@ -138,3 +138,21 @@
    - 요구사항 관리 단계: 승인 이후 요구 사항 변경 요청에 대한 영향 부넉과 요구 사항을 반복적으로 수행하여 사용자 정보 요구 사항이 정보시스템에 누락 없이 반영되어야 함
 3. 정보 요구 사항 유형
    - 기능/비기능/기타 요구 사항
+
+#### 제2절 정보 요구 사항 관리
+- 관리 프로세스: 요구사항 발송 -> 요구 사항 수렴 -> 요구 사항 검토 -> 영향도 분석 -> 공식화 -> 반영 작업 계획 수립
+
+### 제2장 정보 요구 사항 조사
+#### 제1절 정보 요구 사항 수집
+   - 사용자와의 면담을 위한 진행 절차: 계획 및 준비 -> 면담 수행 -> 면담 결과 분석 -> 분석 결과 피드백
+   - 현업 부서 및 전산 부서를 대상으로 다르게 면담 요지 구성
+   - 현행 시스템에서 사용되고 관리되는 프로그램 목록이나 화면 목록도 정보 요구 사항의 중요한 수단
+   - 테이블 목록이나 각각의 레이아웃과 정의서를 이용하여 현행 데이터의 문제점과 사용자 정보 요구사항을 도출할 수 있음
+
+#### 제2절 정보 요구 사항 정리
+   - 워크숍에서 발행한 이슈 사항이나 특이 사항인 경우에 지속적인 관심을 가지고 해결할 수 있도록 별도의 리스트를 작성
+   - 정보 우선순위 분석을 위해 화폐가치 산출 방법과 상대적 중요도 산정 방법을 이용
+
+#### 제3절 정보 요구 사항 통합
+   - 1차적으로 정보 요구사항을 동일한 부서 내 중복 요건이 있는지 확인
+   - 동일 부서 내 정보 요구 사항을 정리한 후 부서 간 정보 요구 사항으로 검토
