--- a/데이터아키텍처 전문가 가이드.md
+++ b/데이터아키텍처 전문가 가이드.md
@@ -156,3 +156,22 @@
 #### 제3절 정보 요구 사항 통합
    - 1차적으로 정보 요구사항을 동일한 부서 내 중복 요건이 있는지 확인
    - 동일 부서 내 정보 요구 사항을 정리한 후 부서 간 정보 요구 사항으로 검토
+
+### 제3장 정보 요구 사항 분석
+#### 제1절 분석 대상 정의
+   - 사용자의 정보 요구 사항에 대해 수집한 기초 자료를 바탕으로 현행 업무 및 현행 시스템에 대한 분석 대상을 정의함으로써 사용자의 정보 요구 사항을 구체화하고 상세화하는 작업의 효율성을 이룸
+   - 현행 업무에 대한 분석 대상은 현행 업무 흐름도, 업무 설명서, 업무 분장 기술서 등
+   - 현행 시스템의 분석 대상을 선정하기 위해서는 업무 영역, 현행 시스템 매트릭스를 작성하여 관련있는 현행 시스템을 정의하고, 정의된 혀냉 시스템에 대한 관련 자룔르 분석 대상으로 정의
+
+#### 제2절 정보 요구 사항 상세화
+   - 정보 요구 사항에 대한 분석 및 상세화 작업
+     - 프로세스 관점: 조직의 업무 프로세스를 기본 프로세스까지 분해하는 과정을 통해 기본 프로세스에서 필요로 하는 정보 항목에 대해 정리한 후 최종 정보 항목을 도출하는 과정
+     - 객체지향 관점
+       - 사용자의 정보 요구사항에 대해서 유스케이스 다이어그램을 작성하여 정보 요구사항을 다이어그램화
+       - 해당 정보 요구 사항에 대한 사건 흐름을 상세하게 기술
+       - 대안흐름, 예외사항 등 비기능적인 정보 요구 사항도 기술
+   - 유스케이스 다이어그램 및 유스케이스 정의서를 통해서 해당 클래스 엔터티를 도출
+   - 클래스 간의 관계 및 클래스의 특성을 나타내는 속성을 도출 -> 최종적인 정보 요구 사항의 상세화 작업 종료
+
+#### 제3절 정보 요구 사항 확인
+   - 재검토 기준: 완전성, 정확성, 일관성, 안정성 측면 모두 고려
