--- a/데이터아키텍처 전문가 가이드.md
+++ b/데이터아키텍처 전문가 가이드.md
@@ -175,3 +175,15 @@
 
 #### 제3절 정보 요구 사항 확인
    - 재검토 기준: 완전성, 정확성, 일관성, 안정성 측면 모두 고려
+
+### 제4장 정보 요구 사항 명세화
+#### 제1절 정보 요구 사항 명세 정의
+   - 정보 요구 사항 명세
+     - 요구 분석 과정의 최종 산출물 
+     - 사용자와 개발자를 연결시키는 중요한 문서이므로 완성될 시스템의 기능적 요구사항을 정확하게 서술
+     - 사용자가 이해하기 쉽고
+     - 개발자가 설계와 코딩에 효과적으로 사용할 수 있도록
+     - 테스터가 기준으로 삼을 수 있게 정량적으로 작성
+   - 정보 요구 분석 명세서: 시스템 개발자가 구현할 것에 대한 공식적 문서, 시스템 개발과 관련된 이해 당사자(사용자, 개발자, 테스터)에게는 중요한 기준이 됨
+#### 제2절 정보 요구 사항 명세 상세화
+   - 정보 요구사항 상세 내역: 요구 사항명, 분류, 상세설명, 산출정보, 관련요구 사항, 출처 등 작성
