--- a/데이터아키텍처 전문가 가이드.md
+++ b/데이터아키텍처 전문가 가이드.md
@@ -187,3 +187,20 @@
    - 정보 요구 분석 명세서: 시스템 개발자가 구현할 것에 대한 공식적 문서, 시스템 개발과 관련된 이해 당사자(사용자, 개발자, 테스터)에게는 중요한 기준이 됨
 #### 제2절 정보 요구 사항 명세 상세화
    - 정보 요구사항 상세 내역: 요구 사항명, 분류, 상세설명, 산출정보, 관련요구 사항, 출처 등 작성
+
+### 제5장 정보 요구 사항 검증 및 변경 관리
+#### 제1절 정보 요구 사항 검증 정의
+   - 정보 요구 사항 검증
+     - 요구 사항 명세서에 사용자의 요구가 올바르게 기술되었는지에 대해 검토하고 베이스라인으로 설정하는 활동
+     - 요구 사항 명세서 검토, 용어 검증, 베이스라인을 설정하는 일
+
+#### 제2절 정보 요구 사항 상관분석 기법
+   - 정보 요구 조사 및 분석 단계를 거쳐 도출된 정보 요구 목록의 완전성을 검증하기 위한 목적으로 상관분석 활용
+
+#### 제3절 추가 및 삭제 정보 요구 사항 도출
+   - 상관분석 매트릭스의 셀 값을 통해 정보 요구 사항 도출의 누락 및 삭제 여부를 파악할 수 있음
+   - 동시에 업무 기능, 프로세스, 조직과 정보 요구의 일관성을 유지할 수 있음
+
+#### 제4절 정보 요구 사항 변경 관리
+   - 프로젝트 진행과정에서 발생하는 이러한 요구 사항 변경에 대하여 일치성과 무결성을 제공하기 위해 변경 제어와 추적 등의 활동 수행
+   - 변경영향 분석 후, 변경 승인/기각을 결정
