--- a/데이터아키텍처 전문가 가이드.md
+++ b/데이터아키텍처 전문가 가이드.md
@@ -204,3 +204,19 @@
 #### 제4절 정보 요구 사항 변경 관리
    - 프로젝트 진행과정에서 발생하는 이러한 요구 사항 변경에 대하여 일치성과 무결성을 제공하기 위해 변경 제어와 추적 등의 활동 수행
    - 변경영향 분석 후, 변경 승인/기각을 결정
+
+## 3과목: 데이터 표준화
+### 제1장 데이터 표준화 개요
+#### 제1절 데이터 표준화 필요성
+   - 데이터 활용에 따른 문제점: 데이터의 중복, 시스템별 데이터 불일치, 데이터에 대한 의미 파악 시 어려움
+   - 데이터 품질 및 표준이 가지는 문제점: 동시 다발적인 정보시스템 개발, 전사 데이터 관리 마인드 형성, 전사 데이터 관리 인력 부재, 전사 데이터 표준 관리 도구 부재
+   - 기업의 전략적 의사결정으로서 데이터 중요성이 증가함에 따라 전사적인 데이터 표준화 활동 필요
+   - 기대효과: 명확한 의사소통 증대, 데이터 품질 향상
+
+#### 제2절 데이터 표준화 개념
+   - 데이터 표준화: 시스템별로 산재해 있는 정보 요소에 대한 정의, 명칭, 형식, 원칙을 수립하여 전사적으로 적용하는 것을 의미
+   - 구성 요소: 데이터 명칭, 데이터 정의, 데이터 형식, 데이터 규칙
+   - 사용자가 의미를 잘 이해할 수 있도록 데이터 정의를 기술해야 하며, 서술로서만 의미가 어려울 경우 관련 계산식이나 예를 포함하여 이해를 높임
+   - 발생 가능한 데이터 값을 사전에 정의함으로써 데이터 정합성 및 완전성을 향상할 수 있는 방법으로 데이터에 대한 기본값, 허용값, 허용 범위 등을 정의
+   - 데이터 표준으로 관리하는 대상: 표준 용어, 표준 단어, 표준 도메인, 코드
+   - 표준 용어는 일사 업무에서 사용하는 업무적 용어와 정보시스템에서 사용하는 기술적 용어로 정의
