--- a/데이터아키텍처 전문가 가이드.md
+++ b/데이터아키텍처 전문가 가이드.md
@@ -220,3 +220,18 @@
    - 발생 가능한 데이터 값을 사전에 정의함으로써 데이터 정합성 및 완전성을 향상할 수 있는 방법으로 데이터에 대한 기본값, 허용값, 허용 범위 등을 정의
    - 데이터 표준으로 관리하는 대상: 표준 용어, 표준 단어, 표준 도메인, 코드
    - 표준 용어는 일사 업무에서 사용하는 업무적 용어와 정보시스템에서 사용하는 기술적 용어로 정의
+
+#### 제3절 데이터 표준 관리 도구
+   - 전사 데이터 표준을 관리하고 전체적인 프로세스를 지원하기 위해서는 데이터 표준 시스템 고려
+   - 일반적인 데이터 표준 관리 시스템의 기본 기능으로 표준 관리, 구조 관리, 프로세스 관리가 있음
+
+### 제2장 데이터 표준 수립
+#### 제1절 데이터 표준화 원칙 정의
+   - 현업 및 개발자로부터 데이터 표준과 관련된 요구 사항을 인터뷰 및 설문조사 등을 통해 조사
+   - 현행 정보시스템에서 적용하고 있는 데이터 표준 원칙 및 데이터 표준을 수집하여 현행 데이터 표준의 관리 대상 및 현황 파악
+   - 적용 DBMS별 특성을 감안하여 타 DBMS에서 적용이 불가능한 상황이 발생하지 않도록 주의
+
+#### 제2절 데이터 표준 정의
+   - 표준 단어: 문법상 일정한 뜻과 구실을 가지는 말의 최소 단위를 의미, 기업에서 업무상 사용하며 일정한 의미를 갖음
+   - ㄴ 동음이의어와 이음동의어에 주의
+   - ㄴ 접두어 및 접미어 처리에 대한 원칙을 수립하여 혼동을 방지해야 함
