--- a/데이터아키텍처 전문가 가이드.md
+++ b/데이터아키텍처 전문가 가이드.md
@@ -235,3 +235,25 @@
    - 표준 단어: 문법상 일정한 뜻과 구실을 가지는 말의 최소 단위를 의미, 기업에서 업무상 사용하며 일정한 의미를 갖음
    - ㄴ 동음이의어와 이음동의어에 주의
    - ㄴ 접두어 및 접미어 처리에 대한 원칙을 수립하여 혼동을 방지해야 함
+   - 표준 도메인: 전사적으로 사용하고 있는 데이터를 유사한 그룹으로 나누어 동일한 유형과 길이를 정의하기 위한 방안
+   - ㄴ 하나의 도메인은 여러 개의 하위 도메인을 가질 수 있음
+   - ㄴ 하나의 데이터 항목은 복수 개의 도메인을 지정할 수 없고, 반드시 하나의 도메인을 지정해야 함
+   - 표준 코드: 업무 범위에서 가능한 한 유일하게 정의를 해야 데이터의 중복 및 불일치성을 방지할 수 있음
+   - ㄴ 코드 관리 방법: 단독 코드 테이블로 관리하는 방법, 전체를 하나의 테이블에 통합하여 관리하는 방법, 해당 애플리케이션 내부에서 관리하는 방법
+   - ㄴ 가능한 한 전체 코드를 하나의 테이블에서 통합 관리하는 것이 좀 더 효율적일 수 있음 -> 신규 정의 및 변경에 대응하기 쉬움
+   - ㄴ 특정 데이터 항목이 사용되는 코드 값을 조사하여 허용 값 및 허용 범위에 대한 정확성 여부를 검토
+   - ㄴ 코드 통합 시에는 가능한 한 기존 코드를 기준으로 통합을 하며, 너무 무리한 통합으로 의미의 이해나 사용에 무리가 되지 않도록 함
+
+#### 데3절 데이터 표준 확정
+   - 정의된 데이터 표준들이 업무적으로나 의미적으로 유일한지, 필수 입력 사항은 전부 정의되었는지, 전사 정보시스템에서 사용하기에 적합한지를 검토
+   - 데이터 표준에 대한 검토 계획을 수립하여 관련자의 검토를 받도록 함
+   - 최종 확정된 데이터 표준을 배포하여 전사 시스템에 적용 가능하도록 데이터 표준 관리 도구에 등록하고, 데이터 표준에 대한 이해 및 효과적인 적용을 위해 교육 작업을 수행
+
+### 제3장 데이터 표준 관리
+#### 제1절 데이터 표준 관리
+   - 데이터 표준 단계부터 수립된 데이터 표준을 준수하기 위해서는 절차를 수립하여 준수하도록 함
+   - 데이터 표준을 관리하기 위한 구성 요소로는 프로세스, 대스크, 역할과 담당 업무가 필요함
+
+#### 제2절 데이터 표준 관리 프로세스
+   - 데이터 표준 관리 프로세스는 데이터 표준이 변경되거나 신규로 개발을 해야 하는데, 정립된 표준이 없는 경우에 적용하는 프로세스
+   - 데이터 표준을 변경하기 위해서는 관련 있는 시스템이나 테이블, 표준 대상, 프로그램에 대한 영향도를 분석해야 함
