--- a/데이터아키텍처 전문가 가이드.md
+++ b/데이터아키텍처 전문가 가이드.md
@@ -257,3 +257,25 @@
 #### 제2절 데이터 표준 관리 프로세스
    - 데이터 표준 관리 프로세스는 데이터 표준이 변경되거나 신규로 개발을 해야 하는데, 정립된 표준이 없는 경우에 적용하는 프로세스
    - 데이터 표준을 변경하기 위해서는 관련 있는 시스템이나 테이블, 표준 대상, 프로그램에 대한 영향도를 분석해야 함
+
+## 4과목: 데이터 모델링
+### 제1장 데이터 모델링 이해
+#### 제1절 데이터 모델링 개요
+   - 데이터 모데링: 현실 세계 조직으 업무에서 필요로 하는 정보를 컴퓨터 세계의 데이터베이스에 저장, 활용하기 위해 데이터 구조 및 업무 규칙을 표현하는 지적인 작업 과정
+   - 데이터 모델링 단계: 개념 데이터 모델링, 논리 데이터 모델링, 물리 데이터 모델링
+   - 관계형 모델 이론: 데이터 중복, 약한 데이터 무결성, 데이터베이스 구조가 물리적 구현에 지나치게 의존하는 것 등의 문제를 해결하고 대규모의 데이터를 취급할 수 있는 방법
+
+#### 제2절 데이터 모델링 기법 이해
+   - 논리 데이터 모델 추상화
+     - 유형화
+     - 집단화
+     - 일반화
+   - 엔티티-관계 데이터 모델은 엔티티, 관계, 속성 세가지 요소로 구성
+
+#### 제3절 데이터 모델링 표기법 이해
+   - 바커 CASE*Method 표기법
+   - I/E 표기법
+
+#### 제4절 관계형 모델 이론
+   - 업무에서 사용하는 데이터 구조, 조작, 무결성에 대한 간단한 이론
+   - 6가지 특성을 가진 행과 열로 구성된 2차원 테이블로 표현
