--- a/데이터아키텍처 전문가 가이드.md
+++ b/데이터아키텍처 전문가 가이드.md
@@ -279,3 +279,12 @@
 #### 제4절 관계형 모델 이론
    - 업무에서 사용하는 데이터 구조, 조작, 무결성에 대한 간단한 이론
    - 6가지 특성을 가진 행과 열로 구성된 2차원 테이블로 표현
+   - 관계형 데이터 모델의 조작은 8개의 조회연산자와 3개의 처리 연산자로 데이터 조작을 하는데 이의 핵심은 집합처럼 연산하는 것
+   - 데이터 무결성: 사용자가 관계형 테이블에 입력, 수정, 삭제, 조회의 데이터 조작을 수행할 때 데이터의 일관성과 정확성을 유지할 수 있도록 하는 일련의 업무 규칙을 말함
+   - 관계형 모델 장점 ->데이터 괌점에서 다중(엔티티, 참조, 도메인, 연쇄작용) 무결성을 보장한다는 것
+
+### 제2장 데이터 모델링
+#### 제1절 논리 데이터 모델링
+   - 데이터 모델링: 업무에서 필요로 하는 데이터에 존재하는 사실을 인식, 기록하는 것
+   - 데이터 아키텍처 관점에서 개념 데이터 모델링은 최종적인 논리 데이터 모델이 완성되는 과정에서 존재하는 데이터 모델링
+   - 논리 데이터 모델의 최종적 모델은 속성이 갖는 업무 규칙을 빠짐없이 정확하게 파악하는 것 -> 이런 이유로 프로젝트 초기 너무 많은 시간을 개념 데이터 모델링에 할당하지 말고 속성 지향형 모델링을 지량해야 함
