--- a/데이터아키텍처 전문가 가이드.md
+++ b/데이터아키텍처 전문가 가이드.md
@@ -288,3 +288,13 @@
    - 데이터 모델링: 업무에서 필요로 하는 데이터에 존재하는 사실을 인식, 기록하는 것
    - 데이터 아키텍처 관점에서 개념 데이터 모델링은 최종적인 논리 데이터 모델이 완성되는 과정에서 존재하는 데이터 모델링
    - 논리 데이터 모델의 최종적 모델은 속성이 갖는 업무 규칙을 빠짐없이 정확하게 파악하는 것 -> 이런 이유로 프로젝트 초기 너무 많은 시간을 개념 데이터 모델링에 할당하지 말고 속성 지향형 모델링을 지량해야 함
+
+#### 제2절 주제 영역 정의
+   - 주제영역: 기업이 사용하는 데이터의 최상위 집합 -> 데이터의 전체 구조를 단계적으로 파악하는 데에 도움
+   - 좋은 모델링을 위한 하나의 기준은 분할 후 정복이라는 개념을 적용시킨다는 것
+   - 전체 업무를 점차적으로 세분화 해나가면서 정채진 규칙을 이용하여 모델링해나감
+
+#### 제3절 엔티티 정의
+   - 엔터티: 조직에서 업무를 수행하는 데 필요로 하는 사물, 사건, 개념을 나타내는 어떤 것
+   - ㄴ 1) 동일한 업무 행위나 2) 유사한 속성을 갖는 단일 개념으로 정의한 인스턴스들의 집합체를 말함
+   - 정보가 관리된ㄴ 어떤 구별가능한 사람, 장소, 사물, 사건 또는 개념으로 현업의 문서, 보고서, 현행 시스템 등으로부터 이러한 엔티티를 정의할 수 있음
