--- a/데이터아키텍처 전문가 가이드.md
+++ b/데이터아키텍처 전문가 가이드.md
@@ -298,3 +298,21 @@
    - 엔터티: 조직에서 업무를 수행하는 데 필요로 하는 사물, 사건, 개념을 나타내는 어떤 것
    - ㄴ 1) 동일한 업무 행위나 2) 유사한 속성을 갖는 단일 개념으로 정의한 인스턴스들의 집합체를 말함
    - 정보가 관리된ㄴ 어떤 구별가능한 사람, 장소, 사물, 사건 또는 개념으로 현업의 문서, 보고서, 현행 시스템 등으로부터 이러한 엔티티를 정의할 수 있음
+
+#### 제4절 관계 정의
+   - 관계: 엔티티와 엔티티 사이 인스턴스가 연관되는 업무적인 이유
+   - 관계는 여러 개의 엔티티를 조인하려 정보를 조회할 수 있고, 중복 데이터를 배제하는 데 도움이 되므로 데이터 정확성 향상에 기여함
+   - 관계가 갖는 기수성, 선택성, 식별성의 매우 중요한 업무 규칙이 되는 표현 방식
+
+#### 제5절 속성 정의
+   - 속성: 엔티티에서 관리되는 구체적인 정보 항목
+   - ㄴ 더이상 분리될 수 없는 최소의 데이터 보관 단위
+   - 속성도 엔티티와 같이 업무 내용, 다양한 문서들을 통하여 도출됨
+   - 빠짐없이 정확한 속성 업무의 파악은 고품질 데이터베이스의 초석
+
+#### 제6절 식별자 확정
+   - 식별자 속성의 값은 반드시 있어야 함(Not null)
+   - 엔티티의 하나의 인스턴스를 유일하게 해주는 값이어야 함
+   - 식별자의 유일성을 구성하는 속성의 개수는 최소한으로 함
+   - 속성의 값의 변화가 없는 것(수정 불가)을 고려함
+   - 업무적으로 활용도가 높은 것을 선택함
