--- a/데이터아키텍처 전문가 가이드.md
+++ b/데이터아키텍처 전문가 가이드.md
@@ -316,3 +316,17 @@
    - 식별자의 유일성을 구성하는 속성의 개수는 최소한으로 함
    - 속성의 값의 변화가 없는 것(수정 불가)을 고려함
    - 업무적으로 활용도가 높은 것을 선택함
+
+#### 제7절 정규화
+   - 정규화는 입력이상, 수정이상, 삭제이상이라는 데이터 이상 현상을 제거하여 논리 데이터 모델을 더 안정적이고 유연하게 만드는 단계
+   - 정규화를 통계 정확성, 일관성, 단순성, 비중복성, 안정성을 만족시키는 엔티티를 정의할 수 있는 것
+
+#### 제8절 이력 관리
+   - 이력 데이터의 관리는 모든 데이터를 대상으로 하지는 않음
+   - 실제 이력이 발생하는 데이터 중에서도 꼭 필요한 데이터에 한정해서 이력관리를 수행
+   - 이력 관리에서 중요한 것 -> 이력 관리의 형태로 시점 이력과 선분 이력 중에 적합한 형태를 결정하는 것
+
+#### 제9절 논리 데이터 모델 품질 검토
+   - 논리 데이터 모델 작성 후 설계의 정확성 및 적합성 등을 평가하기 위하여 사전에 데이터 모델 품질검토 기준을 정의하고, 이에 따라 품질 검토 체크리스트를 작성하여 활용 가능
+   - 데이터 모델 품질 검토 기준과 품질 검토 체크리스트는 조직의 형편과 여건에 따라 가감하거나 변형하여 사용 가능
+   - 데이터 모델 품질 검토는 완벽한 모델보다 조직에 적합한 모델을 얻기 위함
