--- a/데이터아키텍처 전문가 가이드.md
+++ b/데이터아키텍처 전문가 가이드.md
@@ -330,3 +330,18 @@
    - 논리 데이터 모델 작성 후 설계의 정확성 및 적합성 등을 평가하기 위하여 사전에 데이터 모델 품질검토 기준을 정의하고, 이에 따라 품질 검토 체크리스트를 작성하여 활용 가능
    - 데이터 모델 품질 검토 기준과 품질 검토 체크리스트는 조직의 형편과 여건에 따라 가감하거나 변형하여 사용 가능
    - 데이터 모델 품질 검토는 완벽한 모델보다 조직에 적합한 모델을 얻기 위함
+
+### 제3장 물리 데이터 모델링
+#### 제1절 물리 데이터 모델링 이해
+   - 물리 데이터 모델링: 논리 데이터 모델을 기반으로 생성
+   - 논리 데이터 모델을 일정한 기준과 규칙에 의해 변환하는 작업이 물리 데이터 모델링
+   - 물리 데이터 모델링은 DBMS의 특성, 기능, 성능 등을 고려하여 데이터베이스와 물리적인 구조를 작성하는 과정
+
+#### 물리 요소 조사 및 분석
+   - 데이터베이스의 물리적인 구조를 생성하는 데 필요한 요소들을 파악
+   - 명명규칙, 하드웨어 자원의 개략적 내용, 운영체제 및 DBMS 버전 등이 포함됨
+
+#### 제3절 논리-물리 모델 변환
+   - 논리 데이터 모델의 각 요소들을 실제적인 DBMS의 물리적은 객체로 변환하는 작업을 논리-물리 변환이라 함
+   - 서브타입의 변환은 몇 가지의 형태가 존재하기 때문에 판단의 근거를 숙지하고 최적의 형태를 결정해야 함
+   - 관계의 변환 시 배타적 관계의 변화넹 대해서도 몇 가지 판단의 근거를 고려해야 함
